--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 	<link href="css/style.css?v=100" type="text/css" rel="stylesheet" />
     <script src="js/script.js?v=100"></script>
 </head>
-<body>
+<body class="firstload" data-slide="1">
  
 	<div id="wrap">
 
 		
-		<section id="section-1">
+		<section id="section-1" data-section="1">
 			<div class="header">
 				<a class="logo-dogchow" target="_blank" href="https://www.purina-dogchow.ru/"></a>
 				<a class="logo-tass" target="_blank" href="https://tass.ru/"></a>
@@ -28,12 +28,12 @@
 			<div class="soc-btns"></div>
 		</section>
 		
-		<section id="section-2">
+		<section id="section-2" data-section="2">
 			<p>Собака&nbsp;&mdash; лучший друг человека и&nbsp;верный помощник с&nbsp;давних времен. Сегодня специально обученные собаки-поисковики приходят на&nbsp;помощь всем людям, которые в&nbsp;ней нуждаются. Чтобы проверить квадрат леса площадью 500&nbsp;кв. метров, пешим спасателям требуется 5-6&nbsp;часов, а&nbsp;с&nbsp;собакой можно сократить время до&nbsp;3-3,5&nbsp;часов. Так, работая в&nbsp;команде, собака и&nbsp;человек спасают жизни.</p>
 			<p>Какие собаки могут стать спасателями, как их&nbsp;воспитывать и&nbsp;тренировать, что они делают на&nbsp;работе&nbsp;&mdash; читайте в&nbsp;совместном проекте ТАСС и&nbsp;Purina<sup class="reg">&reg;</sup>.</p>
 		</section> 
 
-		<section id="section-3">
+		<section id="section-3" data-section="3">
 			<div class="container">
 				<div id="dogs">
 					<div class="dog-item" data-id="1">
