Позиционирование  статей \ анимация меню

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="js/script.js?v=100"></script>
 </head>
 <body class="firstload" data-slide="1">
- 
+	<div id="bg"></div>
 	<div id="wrap">
 
 		
@@ -222,6 +222,7 @@
 					</div>     <!-- PAGE 1-->
 
 
+
 					<div class="dog-item" data-id="2">
 						<div class="dog-item-outher">
 							<div class="header">
@@ -238,7 +239,6 @@
 								<p>Профессиональными спасателями собаки стали не&nbsp;вчера. Есть красивый миф о&nbsp;том, как Господь решил помочь жителям заснеженного острова Ньюфаундленд и&nbsp;создал им&nbsp;сильного, выносливого помощника, похожего на&nbsp;медведя. Собаки породы ньюфаундленд ценятся не&nbsp;только жителями Крайнего Севера, они хороши и&nbsp;в&nbsp;качестве поисковых псов. Так&nbsp;же как и&nbsp;собаки, которых разводили монахи приюта Святого Бернара в&nbsp;Альпах&nbsp;&mdash; сенбернары. С&nbsp;винными бочонками на&nbsp;шее их&nbsp;еще в&nbsp;XIX веке отправляли на&nbsp;помощь заблудившимся странникам, которых четвероногие спасатели отогревали своим теплом и&nbsp;длинной шерстью. Существует легенда о&nbsp;собаке Барри, спасшей таким образом более 40&nbsp;жизней, в&nbsp;том числе жизнь потерявшего сознание младенца, которого пес лизал до&nbsp;тех пор, пока тот не&nbsp;очнулся и&nbsp;не&nbsp;дождался помощи людей. Исторически считается, что собаки этих и&nbsp;некоторых других пород&nbsp;&mdash; прирожденные спасатели. </p>
 							</div>
 							<p class="slider-white-title">традиционные породы собак-компаньонов:</p>
-							
 							<div class="slider-white">
 								<div class="owl-carousel">
 									<div class="slider-white-item">
@@ -594,6 +594,7 @@
 								<img src="img/dog1-main.jpeg" alt="КАКИХ СОБАК БЕРУТ СПАСАТЕЛИ">
 							</div>
 							<h2>КАКИХ СОБАК БЕРУТ<br>В&nbsp;СПАСАТЕЛИ</h2>
+							
 						</div>
 						<div class="dog-item-inner">
 							<div class="first-text-block">
