--- a/index.html
+++ b/index.html
@@ -7,20 +7,23 @@
     <title></title>
     <meta name="description" content="" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	<link href="css/style.css?v=100" type="text/css" rel="stylesheet" />
-    <script src="js/script.js?v=100"></script>
+	<link href="css/style.css?v=111" type="text/css" rel="stylesheet" />
+    <script src="js/script.js?v=111"></script>
 </head>
 <body class="firstload" data-slide="1">
 	<div id="bg"></div>
+	<svg class="progress-circle" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" stroke-miterlimit="1.5" clip-rule="evenodd" viewBox="0 0 72 72">
+		<path fill="none" stroke="#4C4C4C" stroke-width="0.7" d="M38.4 62.2a23.9 23.9 0 01-23.8-23.8 23.9 23.9 0 0123.9-23.8 23.9 23.9 0 010 47.6"></path>
+		<path class="bar" fill="none" stroke="#FFF" stroke-width="2" d="M38.4 62.2a23.9 23.9 0 01-23.8-23.8 23.9 23.9 0 0123.9-23.8 23.9 23.9 0 010 47.6"></path>
+	</svg>
+	<div class="header">
+		<a class="logo-dogchow" target="_blank" href="https://www.purina-dogchow.ru/"></a>
+		<div id="menu"></div>
+		<a class="logo-tass" target="_blank" href="https://tass.ru/"></a>
+	</div>
 	<div id="wrap">
-
-		
 		<section id="section-1" data-section="1">
-			<div class="header">
-				<a class="logo-dogchow" target="_blank" href="https://www.purina-dogchow.ru/"></a>
-				<a class="logo-tass" target="_blank" href="https://tass.ru/"></a>
-			</div>
-			<div>
+ 			<div>
 				<svg id="section1-h1" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" stroke-linejoin="round" stroke-miterlimit="2" clip-rule="evenodd" viewBox="0 0 272 55"><path fill="#fff" d="M96.9 33.8c2.2 2.3 8.6-6.3 10-9.6 0 0 2.4-1.2 2.1 3.5-.2 4.7-2.6 20.7-11 20.3-4.5-.3-6.6-4.7-6.5-6.8.1-2.6 1.6-3 3.3-3 0 0 .4 6.5 3.4 6.6 3.1.2 5.2-7.5 6-11.4-1.4 1.5-3.9 3.4-6.9 3.2-2.7 0-4.6-2.7-4.5-5.4.2-3.4 3.7-8.8 5.5-11.4-2 .4-4.4 1.6-6.8 3.2.2.8.2 1.7.2 2.7-.2 4.3-4.6 11.8-10.2 11.5a3.2 3.2 0 01-3-3.5c.2-4.3 4.2-8.5 8.6-11.6-.4-.4-.9-.6-1.5-.7-5.5-.2-12.8 8.1-17.2 26.8-.8 4.2-.7 6.5-.7 6.5S64 56 64.2 50.1c.3-9.9 10.7-33.7 15-33.5 1.7 0 2.2 1.2 2.2 1.2l-2 3.2c2.3-1.8 4.8-3 7-3 1.7.1 3 .8 3.8 2 4.1-2.3 8-3.8 9.4-3.7 3.4.2 3.8 1.2 3.8 2.4 0 .4-.8 1.5-1.8 3-2.6 3.8-6.7 9.9-4.7 12zm155-1.8c-.1-4.5 4.6-13 14.1-13.5 4.6-.2 6 1.6 6 4.4a36 36 0 01-.9 5.9c-.8 4.4-1.8 9.3 0 10.8 0 0-6.2 3.2-4.8-6.2 0 0-1.5 4.3-7.8 4.6-2.3.1-3.9-.5-4.9-1.5-1.4 1.4-3.5 3-5.9 3-4.3 0-5.1-5-5.2-7.5 0-1-.4-1.5-.9-1.7a22.3 22.3 0 00-4.9 8s-2.7.2-2.9-3.2l.1-1.4a20.5 20.5 0 01-10.4 4.6c-4.4.2-7.5-2.3-7.7-7.6-.2-5.9 7.4-12.2 12.7-12.4 2.7-.1 5.4 1.9 5.6 5.5.1 3.6-4.9 7.5-9.8 7.7-1.9.1-3-.6-3.7-1.6-.3 1-.4 1.9-.3 2.8 0 1.5 1.2 3.2 3.1 3.1 4-.2 9-4 11.6-6.3 1.6-5.2 4.7-11.7 7-11.8 1.8 0 2.4 1.6 2.4 1.6s-2.7 3.5-5.3 10c2.7-3.6 8.8-11 13.4-11.3 3.2-.1 3.7 2.5 3.4 3-.2.3-.7-.1-1.2-.7a37 37 0 00-11.5 8.3c1-.2 2-.2 2.3.2.4.3.4 1.4.5 2.7.2 2.5.4 5.5 2.4 5.5 1.4 0 3-1.3 4-2.4-.2-.8-.4-1.6-.4-2.6zm-75.3-5.6c-1 2.7-2 5.6-2 8 .1 4.2 1.3 4.4 1.3 4.4s0 1-1.6 1.1c-1.5 0-5.3-2.9-3.2-10.1-2.1 3.4-5.7 8.2-8.9 8.3-2.7.1-3.6-2.8-4-5-1.4 1.5-4.6 4.3-8 4.4-3 .1-5.7-1.8-5.9-6.6-.2-5.8 5-13 10.1-13.2 4.6-.1 5.3 2.5 5.3 4.3.2 3.5-4.6 8.3-8.4 8.4-1.5 0-2.6-.3-3.2-.8l-.2 2c0 1.5 1 3 2.5 3 4-.1 6.8-5.3 8.5-5.4 1.7 0 3 .7 3 1.8l-.1 1.3c-.1 1.1-.3 2.5.2 3 2.3 2.1 11.8-12.9 13.7-17.4 0 0 2.4-.2 2.5 2.8 0 1.3-.7 3.4-1.6 5.7zM144.4 18c-4.6 4.6-8.2 9.2-12.5 9.2-1.3 0-1.9-.8-1.9-2.8 0-4 4.2-12.5 11.9-18.6 0 0-1.1-1.3-3.3-1.3-3 0-13 12.2-13 18.8 0 3.7 1.2 7.7 6.3 7.7 2.2 0 4-.7 5.4-1.6-1.2 2.1-2.4 4.6-2.4 6.7 0 4.7 3.5 3.7 3.5 3.7 0-9.4 8.5-19.2 8.5-20.6 0-1.4-1.6-2.2-2.5-1.2zM50 0c11.3 0 21.2 7.5 21.2 18.5s-9.8 20-18 20c-5 0-8-2.3-10.7-4-2 2.9-4.2 4.8-6.6 4.8-4.3 0-6.6-1.7-6.6-4.5 0-2.7 3.2-5.2 8.7-5.2.9 0 1.7 0 2.4.3 4.8-8.2 10.3-21.4 16.4-21.4 1.9 0 2.4 1.7 2.4 1.7-5.8 1.6-10.2 13.5-15 21.6 2.2 1.5 4.1 3.1 7.6 3.1 6.1 0 15.6-8.5 15.6-16C67.5 11.2 61.8 4 50.1 4 43 4 37.7 6.6 37.7 9.2c0 .8.6 2.4 3.4 2.4 4.7 0 7-2.7 7-2.7 2.3 2.2 1.2 6.6-6.8 6.6-4.3 0-7.1-2.7-7.1-7C34.2 3.7 40.5 0 50 0zm159.3 22.5h1c2.7 0 4.5 3.1 4.5 6.3 0 3.1-5.2 9.8-13.2 9.8-3 0-5.4-2.5-5.4-7.2l.1-2.3a8.6 8.6 0 01-2.2.2c-1.6 4.3-5.1 8.6-10 8.6-3 0-6.3-2.2-6.3-7.7 0-4.5 2.2-7.9 5.5-7.8-.2-.7-.4-1.5-.4-2.3 0-3 2.2-5.8 6.1-5.8 3.9 0 6.2 4.7 6.2 9.9l-.1 1.5c.7 0 1.4-.2 2-.3 3.7-11.3 16.6-19.7 21-19.7 1.6 0 2.7 1.4 2.7 3.4 0 3.6-5.4 9-11.5 13.4zm-185.6 3c4.9 1.3 7.1 3.1 7.1 3.1-1.9 2-3.2 1.5-5.7.8l-2.6-.7c-1 3-1.6 6-1.6 8.8 0 0-3.2.6-3.2-4.8 0-1 .3-2.6.9-4.6a31.7 31.7 0 00-6.3 0 35 35 0 00-1.6 9.9s-3.3.1-3.3-4.4c0-1 .4-2.8 1.1-5-5.3.6-8.6 1.8-8.6 1.8 0-3.7 2.5-5.3 9.9-5.7l2.5-6.5c-4.1.8-6.7 2-6.7 2-2.2-2.3.7-5 8.5-5.8C17.3 8 21 3.4 23.4 6c0 0-2.3 3.3-5 8.1a58.5 58.5 0 016.7.3c2.2-3.4 4.6-5.3 6.3-3.6L29 15c7.6 1.7 5.2 5.6 5.2 5.6s-2.3-1.6-7-2.6a82.6 82.6 0 00-3.4 7.6zm98 4.3c0 2.2-4.5 6-6 4.6-1.6-1.5 7.7-10.3 7.7-12.4 0-2.2-1.9-4-4.9-4-3 0-8.5 2.8-8.5 5.8s1.6 3 1.6 3c1.3-2.3 5.9-6.9 7.4-5.3 1.7 1.7-7 7.8-7 12 0 2.6 1.8 4.4 4 4.4 4.1 0 7.7-4.2 7.7-6.3 0-2-2-1.8-2-1.8zm-84.5 2.7c-3 0-4.8 2.4-4.3 3 1.7 1.6 3.6.1 5.7-2.9l-1.4-.1zm162.7.3c0 1.3.1 2.7 2 2.7 4 0 11-8.3 8.3-10.9-.6-.7-1.7-.8-2.8-.7a49.3 49.3 0 01-6.7 3.7 18 18 0 00-.8 5.2zm-18.3-2c0 2.5 1.4 4.3 3.2 4.3 2 0 4.5-2.7 5.9-6.3-3-.8-5.3-2.5-6.6-4.5a9.7 9.7 0 00-2.5 6.5zm77.2-4.6c-2.4 2.8-3 6.7-2 7.6 4 3.4 14-9 10.8-11.7-1.6-1.3-5.8.6-8.8 4.1zM82.2 34c.9 1 5.6-3.2 5.8-7.9v-.5c-4 3.4-7 7.1-5.8 8.4zm146.7-12.8c1.6 0 2.4 1 2.4 2 .1 2.5-4.4 4.6-7.3 4.7-1.3 0-2-.1-2.5-.3 1.7-3.5 5-6.3 7.4-6.4zm-80.2 6c3.6.5 10.5-4 8.3-6-1.2-1.1-6.3 1.3-8.3 6zm40.4-9.6c1.8 0 2.8 2 2.8 5.4 0 .9 0 1.7-.2 2.6-3.8-.7-4.9-3.2-4.9-4.7 0-1.7 1-3.3 2.3-3.3zm-175.5 7a122.3 122.3 0 016.2.3c1-2.5 2.1-5 3.4-7.4a35 35 0 00-6.6.1l-3 7zm204-15.3c1.2 1.1-6.3 10-15.1 14.2C207 14.7 216.3 8 217.6 9.3z"/></svg>
 				<h1>КАК&nbsp;СОБАКИ СПАСАЮТ ЛЮДЕЙ</h1>
 				<div class="btn-down"></div>
@@ -40,14 +43,8 @@
 		<section id="section-3" data-section="3">
 			<div class="container">
 				<div id="dogs">
-
-
 					<div class="dog-item" data-id="1">
 						<div class="dog-item-outher">
-							<div class="header">
-								<a class="logo-dogchow" target="_blank" href="https://www.purina-dogchow.ru/"></a>
-								<a class="logo-tass" target="_blank" href="https://tass.ru/"></a>
-							</div>
 							<div class="img-wrap img-main">
 								<img src="img/dog1-main.jpeg" alt="КАКИХ СОБАК БЕРУТ СПАСАТЕЛИ">
 							</div>
@@ -225,10 +222,6 @@
 
 					<div class="dog-item" data-id="2">
 						<div class="dog-item-outher">
-							<div class="header">
-								<a class="logo-dogchow" target="_blank" href="https://www.purina-dogchow.ru/"></a>
-								<a class="logo-tass" target="_blank" href="https://tass.ru/"></a>
-							</div>
 							<div class="img-wrap img-main">
 								<img src="img/dog1-main.jpeg" alt="КАКИХ СОБАК БЕРУТ СПАСАТЕЛИ">
 							</div>
@@ -390,7 +383,7 @@
 								<script src="https://yastatic.net/share2/share.js"></script>
 								<div class="ya-share2" data-services="twitter,facebook,vkontakte"></div>
 							</div>
-							<span class="title-next" data-link="2">
+							<span class="title-next" data-link="3">
 								<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 590 85">
 									<g fill="#FFF" fill-opacity="0" stroke="#979797">
 										<path fill="none" d="M234.2 19.5c0-4.8 2.8-11 14-11h1.3c11.1 0 13.9 6.3 13.9 11v.9c0 4.7-2.8 11.1-14 11.1h-1.3c-11.2 0-13.9-6.4-13.9-11.1v-1zm190.6 0c0-4.8-2.7-11-13.6-11h-1.4c-9 0-12.4 4.2-13.3 8.4H393V9h-7.2v22.3h7.2v-8.7h3.3c.7 4.3 4 9 13.4 9h1.4c11 0 13.6-6.4 13.6-11.1v-1zM172 31.2h-16.2l-10-10.3v10.3h-7V8.8h7v9l9.9-9h8.7L153 19l11.8 12L175 8.9h9.4L195 31.2h-7.6l-1.8-4h-11.8l-1.7 4zm42.8 0h9.1L212 19l11.4-10.2h-8.7l-9.8 9v-9h-7.2v22.4h7.2V20.9l10 10.3zm52.8 0h16.7c6.7 0 9-3.2 9-7.1v-.4c0-4-2.2-7-9-7h-9.5V14h17V8.8h-24.2v22.4zM316 8.8h7.8l-10.2 17.4c-2 3.3-3.7 5-8.2 5h-5.4v-5.5h4c.3 0 .5-.2.5-.5h0c0-.4-.1-.6-.4-1.1l-9.5-15.3h8l7 11.4 6.4-11.4zm27.4 22.4h7.1V8.8h-7.1v9c-.9.1-3 .3-4.6.3-4.6 0-6.4-.9-6.4-4.5V8.8H325v5.9c0 7.1 4.4 8.8 12.3 8.8 2 0 4-.2 5.9-.4v8zm39.9 0h-7.6l-1.8-4H362l-1.7 4h-7.2l10.2-22.4h9.4l10.5 22.4zm60.5 0h-7.1V14.5h-8.8V8.8h24.7v5.7h-8.8v16.7zM176 22.4h7.4l-3.7-8.4-3.7 8.4zm188.3 0h7.4L368 14l-3.7 8.4zm-115.4 3.5c6 0 7-3.3 7-5.8v-.4c0-2.4-1-5.6-7-5.6s-7.1 3.2-7.1 5.6v.4c0 2.4 1.3 5.8 7.1 5.8zM417.3 20c0 2.4-1.1 5.8-6.8 5.8-5.6 0-6.8-3.3-6.8-5.8v-.4c0-2.4 1.1-5.6 6.8-5.6 5.7 0 6.8 3.2 6.8 5.6v.4zM274.8 26v-4.2h8.2c2 0 2.9.8 2.9 2v.2c0 1.2-1 2-2.9 2h-8.2z"/><path fill="none" d="M516.3 42.1c0 1.8-1.3 5.2-6.1 5.2h-.8c-5.3 0-6.2-3.4-6.2-5.1V42h4.8c0 .6.3 1.6 1.8 1.6h0c1.5 0 1.7-1 1.8-1.6h4.7zM94 62.5c0 3.8-2.5 9.1-13.2 9.1h-1.3C68.5 71.5 66 65 66 60.4v-1c0-4.4 2.5-11 13.5-11h1.3c10.6 0 13.2 5 13.2 9.1v.2h-7.4c0-.6-.7-3.6-6.5-3.6-5.2 0-6.6 3-6.6 5.6v.4c0 2.4 1.4 5.7 6.7 5.7 5.7 0 6.3-3 6.4-3.6H94v.2zm3.2-3c0-4.6 2.8-11 14-11h1.3c11.1 0 13.9 6.4 13.9 11v1c0 4.7-2.7 11.1-14 11.1h-1.3c-11.1 0-13.9-6.4-13.9-11.1v-1zm150.3 12.1c10.7 0 13.2-5.3 13.2-9.1v-.2h-7.4c0 .6-.7 3.6-6.4 3.6-5.3 0-6.7-3.3-6.7-5.7v-.4c0-2.6 1.4-5.6 6.7-5.6 5.7 0 6.3 3 6.4 3.6h7.4v-.2c0-4-2.6-9-13.2-9h-1.3c-11 0-13.5 6.5-13.5 11v.9c0 4.5 2.6 11.1 13.5 11.1h1.3zm104.6-9.1c0 3.8-2.6 9.1-13.2 9.1h-1.4c-10.9 0-13.4-6.6-13.4-11.1v-1c0-4.4 2.5-11 13.4-11h1.4c10.6 0 13.2 5 13.2 9.1v.2h-7.4c-.1-.6-.8-3.6-6.5-3.6-5.3 0-6.7 3-6.7 5.6v.4c0 2.4 1.4 5.7 6.7 5.7 5.8 0 6.4-3 6.5-3.6h7.4v.2zm-221.4 8.8h16.6c6.7 0 9-3.2 9-7.2v-.3c0-4-2.2-7-9-7h-9.5V54h17v-5.2h-24.1v22.4zm57.2 0h-7.7l-1.7-4h-11.8l-1.7 4h-7.2L168 48.8h9.5l10.5 22.4zm19.8 0h9.2l-12-12.2 11.3-10.2h-8.6l-9.9 9v-9h-7.1v22.4h7.1V60.9l10 10.3zm64.4 0H265V48.8h24.6v22.4h-7.1v-17H272v17zm42.6 0h7.6L312 48.8h-9.5l-10.1 22.4h7.1l1.8-4h11.7l1.8 4zm61.4 0h7.7l-10.5-22.4H364l-10.2 22.4h7.2l1.7-4h11.8l1.8 4zm25.1 0h-7.1V54.5h-8.8v-5.7H410v5.7h-8.8v16.7zM414 48.8v22.4h21.6V66H421v-3.5H435v-5.3h-13.8V54h14.3v-5.2H414zm51 22.4H458v-17h-8.6a44 44 0 01-1.2 12.6c-1 2.5-2.6 4.4-7.2 4.4h-2.4v-5.9h.4c1.6 0 2.3-.7 2.8-1.7.6-1.5.7-3.7.7-14.8H465v22.4zm5.3-22.4v22.4H492V66h-14.5v-3.5h13.9v-5.3h-13.9V54h14.3v-5.2h-21.4zM523 71.2h-7.1V56.9l-12.1 14.3h-7.2V48.8h7.2v14.3l12-14.3h7.2v22.4zm-354.1-8.8h7.4l-3.8-8.4-3.6 8.4zm141.8 0h-7.4L307 54l3.8 8.4zm61.5 0h-7.4l3.7-8.4 3.7 8.4zm-260.4 3.5c6 0 7.1-3.4 7.1-5.8v-.4c0-2.4-1.1-5.6-7-5.6-6 0-7.2 3.2-7.2 5.6v.4c0 2.4 1.3 5.8 7.1 5.8zm107-1v-5.5H229V65h-10.3zm-81 1.1v-4.2h8.3c1.9 0 2.8.8 2.8 2v.2c0 1.2-1 2-2.8 2h-8.3z"/>
@@ -405,10 +398,6 @@
 
 					<div class="dog-item" data-id="3">
 						<div class="dog-item-outher">
-							<div class="header">
-								<a class="logo-dogchow" target="_blank" href="https://www.purina-dogchow.ru/"></a>
-								<a class="logo-tass" target="_blank" href="https://tass.ru/"></a>
-							</div>
 							<div class="img-wrap img-main">
 								<img src="img/dog1-main.jpeg" alt="КАКИХ СОБАК БЕРУТ СПАСАТЕЛИ">
 							</div>
@@ -571,7 +560,7 @@
 								<script src="https://yastatic.net/share2/share.js"></script>
 								<div class="ya-share2" data-services="twitter,facebook,vkontakte"></div>
 							</div>
-							<span class="title-next" data-link="2">
+							<span class="title-next" data-link="4">
 								<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 590 85">
 									<g fill="#FFF" fill-opacity="0" stroke="#979797">
 										<path fill="none" d="M234.2 19.5c0-4.8 2.8-11 14-11h1.3c11.1 0 13.9 6.3 13.9 11v.9c0 4.7-2.8 11.1-14 11.1h-1.3c-11.2 0-13.9-6.4-13.9-11.1v-1zm190.6 0c0-4.8-2.7-11-13.6-11h-1.4c-9 0-12.4 4.2-13.3 8.4H393V9h-7.2v22.3h7.2v-8.7h3.3c.7 4.3 4 9 13.4 9h1.4c11 0 13.6-6.4 13.6-11.1v-1zM172 31.2h-16.2l-10-10.3v10.3h-7V8.8h7v9l9.9-9h8.7L153 19l11.8 12L175 8.9h9.4L195 31.2h-7.6l-1.8-4h-11.8l-1.7 4zm42.8 0h9.1L212 19l11.4-10.2h-8.7l-9.8 9v-9h-7.2v22.4h7.2V20.9l10 10.3zm52.8 0h16.7c6.7 0 9-3.2 9-7.1v-.4c0-4-2.2-7-9-7h-9.5V14h17V8.8h-24.2v22.4zM316 8.8h7.8l-10.2 17.4c-2 3.3-3.7 5-8.2 5h-5.4v-5.5h4c.3 0 .5-.2.5-.5h0c0-.4-.1-.6-.4-1.1l-9.5-15.3h8l7 11.4 6.4-11.4zm27.4 22.4h7.1V8.8h-7.1v9c-.9.1-3 .3-4.6.3-4.6 0-6.4-.9-6.4-4.5V8.8H325v5.9c0 7.1 4.4 8.8 12.3 8.8 2 0 4-.2 5.9-.4v8zm39.9 0h-7.6l-1.8-4H362l-1.7 4h-7.2l10.2-22.4h9.4l10.5 22.4zm60.5 0h-7.1V14.5h-8.8V8.8h24.7v5.7h-8.8v16.7zM176 22.4h7.4l-3.7-8.4-3.7 8.4zm188.3 0h7.4L368 14l-3.7 8.4zm-115.4 3.5c6 0 7-3.3 7-5.8v-.4c0-2.4-1-5.6-7-5.6s-7.1 3.2-7.1 5.6v.4c0 2.4 1.3 5.8 7.1 5.8zM417.3 20c0 2.4-1.1 5.8-6.8 5.8-5.6 0-6.8-3.3-6.8-5.8v-.4c0-2.4 1.1-5.6 6.8-5.6 5.7 0 6.8 3.2 6.8 5.6v.4zM274.8 26v-4.2h8.2c2 0 2.9.8 2.9 2v.2c0 1.2-1 2-2.9 2h-8.2z"/><path fill="none" d="M516.3 42.1c0 1.8-1.3 5.2-6.1 5.2h-.8c-5.3 0-6.2-3.4-6.2-5.1V42h4.8c0 .6.3 1.6 1.8 1.6h0c1.5 0 1.7-1 1.8-1.6h4.7zM94 62.5c0 3.8-2.5 9.1-13.2 9.1h-1.3C68.5 71.5 66 65 66 60.4v-1c0-4.4 2.5-11 13.5-11h1.3c10.6 0 13.2 5 13.2 9.1v.2h-7.4c0-.6-.7-3.6-6.5-3.6-5.2 0-6.6 3-6.6 5.6v.4c0 2.4 1.4 5.7 6.7 5.7 5.7 0 6.3-3 6.4-3.6H94v.2zm3.2-3c0-4.6 2.8-11 14-11h1.3c11.1 0 13.9 6.4 13.9 11v1c0 4.7-2.7 11.1-14 11.1h-1.3c-11.1 0-13.9-6.4-13.9-11.1v-1zm150.3 12.1c10.7 0 13.2-5.3 13.2-9.1v-.2h-7.4c0 .6-.7 3.6-6.4 3.6-5.3 0-6.7-3.3-6.7-5.7v-.4c0-2.6 1.4-5.6 6.7-5.6 5.7 0 6.3 3 6.4 3.6h7.4v-.2c0-4-2.6-9-13.2-9h-1.3c-11 0-13.5 6.5-13.5 11v.9c0 4.5 2.6 11.1 13.5 11.1h1.3zm104.6-9.1c0 3.8-2.6 9.1-13.2 9.1h-1.4c-10.9 0-13.4-6.6-13.4-11.1v-1c0-4.4 2.5-11 13.4-11h1.4c10.6 0 13.2 5 13.2 9.1v.2h-7.4c-.1-.6-.8-3.6-6.5-3.6-5.3 0-6.7 3-6.7 5.6v.4c0 2.4 1.4 5.7 6.7 5.7 5.8 0 6.4-3 6.5-3.6h7.4v.2zm-221.4 8.8h16.6c6.7 0 9-3.2 9-7.2v-.3c0-4-2.2-7-9-7h-9.5V54h17v-5.2h-24.1v22.4zm57.2 0h-7.7l-1.7-4h-11.8l-1.7 4h-7.2L168 48.8h9.5l10.5 22.4zm19.8 0h9.2l-12-12.2 11.3-10.2h-8.6l-9.9 9v-9h-7.1v22.4h7.1V60.9l10 10.3zm64.4 0H265V48.8h24.6v22.4h-7.1v-17H272v17zm42.6 0h7.6L312 48.8h-9.5l-10.1 22.4h7.1l1.8-4h11.7l1.8 4zm61.4 0h7.7l-10.5-22.4H364l-10.2 22.4h7.2l1.7-4h11.8l1.8 4zm25.1 0h-7.1V54.5h-8.8v-5.7H410v5.7h-8.8v16.7zM414 48.8v22.4h21.6V66H421v-3.5H435v-5.3h-13.8V54h14.3v-5.2H414zm51 22.4H458v-17h-8.6a44 44 0 01-1.2 12.6c-1 2.5-2.6 4.4-7.2 4.4h-2.4v-5.9h.4c1.6 0 2.3-.7 2.8-1.7.6-1.5.7-3.7.7-14.8H465v22.4zm5.3-22.4v22.4H492V66h-14.5v-3.5h13.9v-5.3h-13.9V54h14.3v-5.2h-21.4zM523 71.2h-7.1V56.9l-12.1 14.3h-7.2V48.8h7.2v14.3l12-14.3h7.2v22.4zm-354.1-8.8h7.4l-3.8-8.4-3.6 8.4zm141.8 0h-7.4L307 54l3.8 8.4zm61.5 0h-7.4l3.7-8.4 3.7 8.4zm-260.4 3.5c6 0 7.1-3.4 7.1-5.8v-.4c0-2.4-1.1-5.6-7-5.6-6 0-7.2 3.2-7.2 5.6v.4c0 2.4 1.3 5.8 7.1 5.8zm107-1v-5.5H229V65h-10.3zm-81 1.1v-4.2h8.3c1.9 0 2.8.8 2.8 2v.2c0 1.2-1 2-2.8 2h-8.3z"/>
@@ -586,10 +575,6 @@
 
 					<div class="dog-item" data-id="4">
 						<div class="dog-item-outher">
-							<div class="header">
-								<a class="logo-dogchow" target="_blank" href="https://www.purina-dogchow.ru/"></a>
-								<a class="logo-tass" target="_blank" href="https://tass.ru/"></a>
-							</div>
 							<div class="img-wrap img-main">
 								<img src="img/dog1-main.jpeg" alt="КАКИХ СОБАК БЕРУТ СПАСАТЕЛИ">
 							</div>
@@ -753,7 +738,7 @@
 								<script src="https://yastatic.net/share2/share.js"></script>
 								<div class="ya-share2" data-services="twitter,facebook,vkontakte"></div>
 							</div>
-							<span class="title-next" data-link="2">
+							<span class="title-next" data-link="1">
 								<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 590 85">
 									<g fill="#FFF" fill-opacity="0" stroke="#979797">
 										<path fill="none" d="M234.2 19.5c0-4.8 2.8-11 14-11h1.3c11.1 0 13.9 6.3 13.9 11v.9c0 4.7-2.8 11.1-14 11.1h-1.3c-11.2 0-13.9-6.4-13.9-11.1v-1zm190.6 0c0-4.8-2.7-11-13.6-11h-1.4c-9 0-12.4 4.2-13.3 8.4H393V9h-7.2v22.3h7.2v-8.7h3.3c.7 4.3 4 9 13.4 9h1.4c11 0 13.6-6.4 13.6-11.1v-1zM172 31.2h-16.2l-10-10.3v10.3h-7V8.8h7v9l9.9-9h8.7L153 19l11.8 12L175 8.9h9.4L195 31.2h-7.6l-1.8-4h-11.8l-1.7 4zm42.8 0h9.1L212 19l11.4-10.2h-8.7l-9.8 9v-9h-7.2v22.4h7.2V20.9l10 10.3zm52.8 0h16.7c6.7 0 9-3.2 9-7.1v-.4c0-4-2.2-7-9-7h-9.5V14h17V8.8h-24.2v22.4zM316 8.8h7.8l-10.2 17.4c-2 3.3-3.7 5-8.2 5h-5.4v-5.5h4c.3 0 .5-.2.5-.5h0c0-.4-.1-.6-.4-1.1l-9.5-15.3h8l7 11.4 6.4-11.4zm27.4 22.4h7.1V8.8h-7.1v9c-.9.1-3 .3-4.6.3-4.6 0-6.4-.9-6.4-4.5V8.8H325v5.9c0 7.1 4.4 8.8 12.3 8.8 2 0 4-.2 5.9-.4v8zm39.9 0h-7.6l-1.8-4H362l-1.7 4h-7.2l10.2-22.4h9.4l10.5 22.4zm60.5 0h-7.1V14.5h-8.8V8.8h24.7v5.7h-8.8v16.7zM176 22.4h7.4l-3.7-8.4-3.7 8.4zm188.3 0h7.4L368 14l-3.7 8.4zm-115.4 3.5c6 0 7-3.3 7-5.8v-.4c0-2.4-1-5.6-7-5.6s-7.1 3.2-7.1 5.6v.4c0 2.4 1.3 5.8 7.1 5.8zM417.3 20c0 2.4-1.1 5.8-6.8 5.8-5.6 0-6.8-3.3-6.8-5.8v-.4c0-2.4 1.1-5.6 6.8-5.6 5.7 0 6.8 3.2 6.8 5.6v.4zM274.8 26v-4.2h8.2c2 0 2.9.8 2.9 2v.2c0 1.2-1 2-2.9 2h-8.2z"/><path fill="none" d="M516.3 42.1c0 1.8-1.3 5.2-6.1 5.2h-.8c-5.3 0-6.2-3.4-6.2-5.1V42h4.8c0 .6.3 1.6 1.8 1.6h0c1.5 0 1.7-1 1.8-1.6h4.7zM94 62.5c0 3.8-2.5 9.1-13.2 9.1h-1.3C68.5 71.5 66 65 66 60.4v-1c0-4.4 2.5-11 13.5-11h1.3c10.6 0 13.2 5 13.2 9.1v.2h-7.4c0-.6-.7-3.6-6.5-3.6-5.2 0-6.6 3-6.6 5.6v.4c0 2.4 1.4 5.7 6.7 5.7 5.7 0 6.3-3 6.4-3.6H94v.2zm3.2-3c0-4.6 2.8-11 14-11h1.3c11.1 0 13.9 6.4 13.9 11v1c0 4.7-2.7 11.1-14 11.1h-1.3c-11.1 0-13.9-6.4-13.9-11.1v-1zm150.3 12.1c10.7 0 13.2-5.3 13.2-9.1v-.2h-7.4c0 .6-.7 3.6-6.4 3.6-5.3 0-6.7-3.3-6.7-5.7v-.4c0-2.6 1.4-5.6 6.7-5.6 5.7 0 6.3 3 6.4 3.6h7.4v-.2c0-4-2.6-9-13.2-9h-1.3c-11 0-13.5 6.5-13.5 11v.9c0 4.5 2.6 11.1 13.5 11.1h1.3zm104.6-9.1c0 3.8-2.6 9.1-13.2 9.1h-1.4c-10.9 0-13.4-6.6-13.4-11.1v-1c0-4.4 2.5-11 13.4-11h1.4c10.6 0 13.2 5 13.2 9.1v.2h-7.4c-.1-.6-.8-3.6-6.5-3.6-5.3 0-6.7 3-6.7 5.6v.4c0 2.4 1.4 5.7 6.7 5.7 5.8 0 6.4-3 6.5-3.6h7.4v.2zm-221.4 8.8h16.6c6.7 0 9-3.2 9-7.2v-.3c0-4-2.2-7-9-7h-9.5V54h17v-5.2h-24.1v22.4zm57.2 0h-7.7l-1.7-4h-11.8l-1.7 4h-7.2L168 48.8h9.5l10.5 22.4zm19.8 0h9.2l-12-12.2 11.3-10.2h-8.6l-9.9 9v-9h-7.1v22.4h7.1V60.9l10 10.3zm64.4 0H265V48.8h24.6v22.4h-7.1v-17H272v17zm42.6 0h7.6L312 48.8h-9.5l-10.1 22.4h7.1l1.8-4h11.7l1.8 4zm61.4 0h7.7l-10.5-22.4H364l-10.2 22.4h7.2l1.7-4h11.8l1.8 4zm25.1 0h-7.1V54.5h-8.8v-5.7H410v5.7h-8.8v16.7zM414 48.8v22.4h21.6V66H421v-3.5H435v-5.3h-13.8V54h14.3v-5.2H414zm51 22.4H458v-17h-8.6a44 44 0 01-1.2 12.6c-1 2.5-2.6 4.4-7.2 4.4h-2.4v-5.9h.4c1.6 0 2.3-.7 2.8-1.7.6-1.5.7-3.7.7-14.8H465v22.4zm5.3-22.4v22.4H492V66h-14.5v-3.5h13.9v-5.3h-13.9V54h14.3v-5.2h-21.4zM523 71.2h-7.1V56.9l-12.1 14.3h-7.2V48.8h7.2v14.3l12-14.3h7.2v22.4zm-354.1-8.8h7.4l-3.8-8.4-3.6 8.4zm141.8 0h-7.4L307 54l3.8 8.4zm61.5 0h-7.4l3.7-8.4 3.7 8.4zm-260.4 3.5c6 0 7.1-3.4 7.1-5.8v-.4c0-2.4-1.1-5.6-7-5.6-6 0-7.2 3.2-7.2 5.6v.4c0 2.4 1.3 5.8 7.1 5.8zm107-1v-5.5H229V65h-10.3zm-81 1.1v-4.2h8.3c1.9 0 2.8.8 2.8 2v.2c0 1.2-1 2-2.8 2h-8.3z"/>
