--- a/index.html
+++ b/index.html
@@ -448,13 +448,13 @@
 					<div class="dog-item" data-id="3">
 						<div class="dog-item-outher">
 							<div class="img-wrap img-main img-par">
-								<img src="img/article3-main-image.jpg" alt="КАКИХ СОБАК БЕРУТ СПАСАТЕЛИ"/>
+								<img src="img/article3-main-image2.jpg" alt="КАКИХ СОБАК БЕРУТ СПАСАТЕЛИ"/>
 							</div>
 							<h2>Рабочий день <br>собаки-спасателя</h2>
 						</div>
 
 						<div class="dog-item-inner">
-							<div class="first-text-block">
+							<div class="first-text-block fade-up">
 								<p>Поиск людей в&nbsp;природной среде&nbsp;&mdash; сезонная работа. В&nbsp;холодное время года на&nbsp;поиск в&nbsp;лес спасатели выезжают редко. С&nbsp;приходом тепла, появлением первых грибов и&nbsp;ягод число вызовов резко увеличивается. Как ни&nbsp;странно, основная масса тех, кто теряется в&nbsp;лесу,&nbsp;&mdash; местные старожилы, которые знают в&nbsp;лесу каждую тропинку. Поисковик с&nbsp;собакой начинают работать, как правило, с&nbsp;рассветом и&nbsp;заканчивают с&nbsp;сумерками, то&nbsp;есть трудятся весь световой день.</p>
 							</div>
 
@@ -480,7 +480,7 @@
 									</div>
 									<div class="slider-fullscreen-item">
 										<div class="img-wrap img-par">
-											<img src="img/article3-slider-fs1-3.jpg" alt="Собака-спасатель">
+											<img src="img/article3-slider-fs1-3.jpeg" alt="Собака-спасатель">
 										</div>
 									</div>
 	   							</div>
@@ -840,12 +840,11 @@
 							<div class="img-wrap img-main img-par">
 								<img src="img/article5-main-image.jpg" alt="КАКИХ СОБАК БЕРУТ СПАСАТЕЛИ">
 							</div>
-							<h2>Purina<sup class="reg">&reg;</sup> Dog Chow<sup class="reg">&reg;</sup>&nbsp;&mdash; корм для настоящих спасателей</h2>
+							<h2>Рацион для активных собак <br>Purina<sup class="reg">&reg;</sup> Dog Chow <sup class="reg">&reg;</sup></h2>
 						</div>
+						
 						<div class="dog-item-inner">
-
-							
-							<div class="short-text-block fade-up">
+							<div class="first-text-block fade-up">
 								<p>Компания Purina<sup class="reg">&reg;</sup> производит корма для домашних животных с&nbsp;1926&nbsp;года. Многолетний опыт и&nbsp;научные исследования помогли экспертам Purina<sup class="reg">&reg;</sup> разработать линейку сухих кормов премиум-класса Dog Chow<sup class="reg">&reg;</sup>, которая учитывает размер, возраст и&nbsp;особенности организма собаки. В&nbsp;состав корма входят натуральные мясные ингредиенты, овощи, злаки и&nbsp;масла.</p>
 								<p>В&nbsp;правильной пропорции питание Dog Chow<sup class="reg">&reg;</sup> обеспечивает все необходимые питомцу вещества: белки, жиры, углеводы, незаменимые аминокислоты, минералы и&nbsp;витамины. Также в&nbsp;состав корма входит комплекс Naturium<sup class="reg">&reg;</sup>&nbsp;&mdash; сочетание клетчатки и&nbsp;пребиотика природного происхождения, который способствует улучшению пищеварения животного. Корм не&nbsp;содержит искусственных красителей, ароматизаторов и&nbsp;консервантов. </p>
 								<p>Еще одна особенность Dog Chow<sup class="reg">&reg;</sup>&nbsp;&mdash; забота о&nbsp;полости рта собаки. В&nbsp;каждой упаковке сухого корма содержатся гранулы разной формы и&nbsp;размера для медленного пережевывания. При этом в&nbsp;линейке предусмотрены отдельные продукты для активных животных&nbsp;&mdash; как раз таких, как собаки-спасатели.</p>
