много мелких правок

--- a/index.html
+++ b/index.html
@@ -43,16 +43,17 @@
 		<section id="section-3" data-section="3">
 			<div class="container">
 				<div id="dogs">
+
 					<div class="dog-item" data-id="1">
 						<div class="dog-item-outher">
 							<div class="img-wrap img-main img-par">
 								<img src="img/article1-main-image.jpeg" alt="КАКИХ СОБАК БЕРУТ СПАСАТЕЛИ">
 							</div>
-							<h2>КАКИХ СОБАК БЕРУТ<br>В&nbsp;СПАСАТЕЛИ</h2>
+							<div class="h2-wrap">
+								<h2>КАКИХ СОБАК БЕРУТ В&nbsp;СПАСАТЕЛИ</h2>
+							</div>
 						</div>
 						<div class="dog-item-inner">
-
-
 							<div class="first-text-block fade-up">
 								<p>Профессиональными спасателями собаки стали не&nbsp;вчера. Есть красивый миф о&nbsp;том, как Господь решил помочь жителям заснеженного острова Ньюфаундленд и&nbsp;создал им&nbsp;сильного, выносливого помощника, похожего на&nbsp;медведя. Собаки породы ньюфаундленд ценятся не&nbsp;только жителями Крайнего Севера, они хороши и&nbsp;в&nbsp;качестве поисковых псов. Так&nbsp;же как и&nbsp;собаки, которых разводили монахи приюта Святого Бернара в&nbsp;Альпах&nbsp;&mdash; сенбернары. С&nbsp;винными бочонками на&nbsp;шее их&nbsp;еще в&nbsp;XIX веке отправляли на&nbsp;помощь заблудившимся странникам, которых четвероногие спасатели отогревали своим теплом и&nbsp;длинной шерстью. Существует легенда о&nbsp;собаке Барри, спасшей таким образом более 40&nbsp;жизней, в&nbsp;том числе жизнь потерявшего сознание младенца, которого пес лизал до&nbsp;тех пор, пока тот не&nbsp;очнулся и&nbsp;не&nbsp;дождался помощи людей. Исторически считается, что собаки этих и&nbsp;некоторых других пород&nbsp;&mdash; прирожденные спасатели. </p>
 							</div>
@@ -258,7 +259,9 @@
 							<div class="img-wrap img-main img-par">
 								<img src="img/article2-main-image.jpg" alt="КАКИХ СОБАК БЕРУТ СПАСАТЕЛИ">
 							</div>
-							<h2>Как обучают собак-спасателей</h2>
+							<div class="h2-wrap">
+								<h2>Как обучают собак-спасателей</h2>
+							</div>
 						</div>
 						<div class="dog-item-inner">
 							<div class="first-text-block fade-up">
@@ -450,7 +453,10 @@
 							<div class="img-wrap img-main img-par">
 								<img src="img/article3-main-image2.jpg" alt="КАКИХ СОБАК БЕРУТ СПАСАТЕЛИ"/>
 							</div>
-							<h2>Рабочий день <br>собаки-спасателя</h2>
+							
+							<div class="h2-wrap">
+								<h2>Рабочий день <br>собаки-спасателя</h2>
+							</div>
 						</div>
 
 						<div class="dog-item-inner">
@@ -575,7 +581,9 @@
 							<div class="img-wrap img-main">
 								<img src="img/article4-main-image.jpeg" alt="КАКИХ СОБАК БЕРУТ СПАСАТЕЛИ">
 							</div>
-							<h2>Знакомьтесь: </br><span>спасатели</span></h2>
+							<div class="h2-wrap">
+								<h2>Знакомьтесь: </br><span>спасатели</span></h2>
+							</div>
 						</div>
 						<div class="dog-item-inner fade-up">
 
@@ -770,12 +778,12 @@
 									</div>
 									<div class="infogr1-left-item fade-up">
 										<div class="title">Смена</div>
-										<div class="num">5<span class="ed">часов</span></div>
+										<div class="num mb10">5<span class="ed">часов</span></div>
 										<div class="num">15-20<span class="ed">км</span></div>
 									</div>
 									<div class="infogr1-left-item fade-up">
 										<div class="title">Перерыв</div>
-										<div class="num">2-3<span class="ed">каждые часа</span></div>
+										<div class="num">2-3<span class="ed"><span class="ml">каждые часа</span></span></div>
 									</div>
 								</div>
 								<div class="infogr1-right">
@@ -808,7 +816,7 @@
 										<p>После 5&nbsp;часов&nbsp;&mdash; отдых 60-120 минут</p>
 									</div>
 									<div class="infogr1-right-item fade-up">
-										<p class="title">Отдых</p>
+										<p class="title">Еда</p>
 										<p><span class="orange">Каждый день:</span></p>
 										<p>высококалорийный корм, который содержит белки, легкоусвояемые жиры и&nbsp;углеводы</p>
 										<p><span class="orange">Во&nbsp;время тренировок в&nbsp;поле и&nbsp;поиска:</span></p>
@@ -840,9 +848,11 @@
 							<div class="img-wrap img-main img-par">
 								<img src="img/article5-main-image.jpg" alt="КАКИХ СОБАК БЕРУТ СПАСАТЕЛИ">
 							</div>
-							<h2>Рацион для активных собак <br>Purina<sup class="reg">&reg;</sup> Dog Chow <sup class="reg">&reg;</sup></h2>
+							<div class="h2-wrap">
+								<h2>Рацион для активных собак <br>Purina<sup class="reg">&reg;</sup> Dog Chow <sup class="reg">&reg;</sup></h2>
+							</div>
 						</div>
-						
+
 						<div class="dog-item-inner">
 							<div class="first-text-block fade-up">
 								<p>Компания Purina<sup class="reg">&reg;</sup> производит корма для домашних животных с&nbsp;1926&nbsp;года. Многолетний опыт и&nbsp;научные исследования помогли экспертам Purina<sup class="reg">&reg;</sup> разработать линейку сухих кормов премиум-класса Dog Chow<sup class="reg">&reg;</sup>, которая учитывает размер, возраст и&nbsp;особенности организма собаки. В&nbsp;состав корма входят натуральные мясные ингредиенты, овощи, злаки и&nbsp;масла.</p>
