много мелких правок

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link href="css/style.css?v=140" type="text/css" rel="stylesheet" />
   <script src="js/script.js?v=140"></script>
 </head>
-<body class="firstload" data-slide="1">
+<body class="firstload main" data-slide="1">
 	<div id="bg"></div>
 	<svg class="progress-circle" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" stroke-miterlimit="1.5" clip-rule="evenodd" viewBox="0 0 72 72">
 		<path fill="none" stroke="#4C4C4C" stroke-width="0.7" d="M38.4 62.2a23.9 23.9 0 01-23.8-23.8 23.9 23.9 0 0123.9-23.8 23.9 23.9 0 010 47.6"></path>
