--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<section id="section-1" data-section="1">
  			<div>
 				<svg id="section1-h1" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" stroke-linejoin="round" stroke-miterlimit="2" clip-rule="evenodd" viewBox="0 0 272 55"><path fill="#fff" d="M96.9 33.8c2.2 2.3 8.6-6.3 10-9.6 0 0 2.4-1.2 2.1 3.5-.2 4.7-2.6 20.7-11 20.3-4.5-.3-6.6-4.7-6.5-6.8.1-2.6 1.6-3 3.3-3 0 0 .4 6.5 3.4 6.6 3.1.2 5.2-7.5 6-11.4-1.4 1.5-3.9 3.4-6.9 3.2-2.7 0-4.6-2.7-4.5-5.4.2-3.4 3.7-8.8 5.5-11.4-2 .4-4.4 1.6-6.8 3.2.2.8.2 1.7.2 2.7-.2 4.3-4.6 11.8-10.2 11.5a3.2 3.2 0 01-3-3.5c.2-4.3 4.2-8.5 8.6-11.6-.4-.4-.9-.6-1.5-.7-5.5-.2-12.8 8.1-17.2 26.8-.8 4.2-.7 6.5-.7 6.5S64 56 64.2 50.1c.3-9.9 10.7-33.7 15-33.5 1.7 0 2.2 1.2 2.2 1.2l-2 3.2c2.3-1.8 4.8-3 7-3 1.7.1 3 .8 3.8 2 4.1-2.3 8-3.8 9.4-3.7 3.4.2 3.8 1.2 3.8 2.4 0 .4-.8 1.5-1.8 3-2.6 3.8-6.7 9.9-4.7 12zm155-1.8c-.1-4.5 4.6-13 14.1-13.5 4.6-.2 6 1.6 6 4.4a36 36 0 01-.9 5.9c-.8 4.4-1.8 9.3 0 10.8 0 0-6.2 3.2-4.8-6.2 0 0-1.5 4.3-7.8 4.6-2.3.1-3.9-.5-4.9-1.5-1.4 1.4-3.5 3-5.9 3-4.3 0-5.1-5-5.2-7.5 0-1-.4-1.5-.9-1.7a22.3 22.3 0 00-4.9 8s-2.7.2-2.9-3.2l.1-1.4a20.5 20.5 0 01-10.4 4.6c-4.4.2-7.5-2.3-7.7-7.6-.2-5.9 7.4-12.2 12.7-12.4 2.7-.1 5.4 1.9 5.6 5.5.1 3.6-4.9 7.5-9.8 7.7-1.9.1-3-.6-3.7-1.6-.3 1-.4 1.9-.3 2.8 0 1.5 1.2 3.2 3.1 3.1 4-.2 9-4 11.6-6.3 1.6-5.2 4.7-11.7 7-11.8 1.8 0 2.4 1.6 2.4 1.6s-2.7 3.5-5.3 10c2.7-3.6 8.8-11 13.4-11.3 3.2-.1 3.7 2.5 3.4 3-.2.3-.7-.1-1.2-.7a37 37 0 00-11.5 8.3c1-.2 2-.2 2.3.2.4.3.4 1.4.5 2.7.2 2.5.4 5.5 2.4 5.5 1.4 0 3-1.3 4-2.4-.2-.8-.4-1.6-.4-2.6zm-75.3-5.6c-1 2.7-2 5.6-2 8 .1 4.2 1.3 4.4 1.3 4.4s0 1-1.6 1.1c-1.5 0-5.3-2.9-3.2-10.1-2.1 3.4-5.7 8.2-8.9 8.3-2.7.1-3.6-2.8-4-5-1.4 1.5-4.6 4.3-8 4.4-3 .1-5.7-1.8-5.9-6.6-.2-5.8 5-13 10.1-13.2 4.6-.1 5.3 2.5 5.3 4.3.2 3.5-4.6 8.3-8.4 8.4-1.5 0-2.6-.3-3.2-.8l-.2 2c0 1.5 1 3 2.5 3 4-.1 6.8-5.3 8.5-5.4 1.7 0 3 .7 3 1.8l-.1 1.3c-.1 1.1-.3 2.5.2 3 2.3 2.1 11.8-12.9 13.7-17.4 0 0 2.4-.2 2.5 2.8 0 1.3-.7 3.4-1.6 5.7zM144.4 18c-4.6 4.6-8.2 9.2-12.5 9.2-1.3 0-1.9-.8-1.9-2.8 0-4 4.2-12.5 11.9-18.6 0 0-1.1-1.3-3.3-1.3-3 0-13 12.2-13 18.8 0 3.7 1.2 7.7 6.3 7.7 2.2 0 4-.7 5.4-1.6-1.2 2.1-2.4 4.6-2.4 6.7 0 4.7 3.5 3.7 3.5 3.7 0-9.4 8.5-19.2 8.5-20.6 0-1.4-1.6-2.2-2.5-1.2zM50 0c11.3 0 21.2 7.5 21.2 18.5s-9.8 20-18 20c-5 0-8-2.3-10.7-4-2 2.9-4.2 4.8-6.6 4.8-4.3 0-6.6-1.7-6.6-4.5 0-2.7 3.2-5.2 8.7-5.2.9 0 1.7 0 2.4.3 4.8-8.2 10.3-21.4 16.4-21.4 1.9 0 2.4 1.7 2.4 1.7-5.8 1.6-10.2 13.5-15 21.6 2.2 1.5 4.1 3.1 7.6 3.1 6.1 0 15.6-8.5 15.6-16C67.5 11.2 61.8 4 50.1 4 43 4 37.7 6.6 37.7 9.2c0 .8.6 2.4 3.4 2.4 4.7 0 7-2.7 7-2.7 2.3 2.2 1.2 6.6-6.8 6.6-4.3 0-7.1-2.7-7.1-7C34.2 3.7 40.5 0 50 0zm159.3 22.5h1c2.7 0 4.5 3.1 4.5 6.3 0 3.1-5.2 9.8-13.2 9.8-3 0-5.4-2.5-5.4-7.2l.1-2.3a8.6 8.6 0 01-2.2.2c-1.6 4.3-5.1 8.6-10 8.6-3 0-6.3-2.2-6.3-7.7 0-4.5 2.2-7.9 5.5-7.8-.2-.7-.4-1.5-.4-2.3 0-3 2.2-5.8 6.1-5.8 3.9 0 6.2 4.7 6.2 9.9l-.1 1.5c.7 0 1.4-.2 2-.3 3.7-11.3 16.6-19.7 21-19.7 1.6 0 2.7 1.4 2.7 3.4 0 3.6-5.4 9-11.5 13.4zm-185.6 3c4.9 1.3 7.1 3.1 7.1 3.1-1.9 2-3.2 1.5-5.7.8l-2.6-.7c-1 3-1.6 6-1.6 8.8 0 0-3.2.6-3.2-4.8 0-1 .3-2.6.9-4.6a31.7 31.7 0 00-6.3 0 35 35 0 00-1.6 9.9s-3.3.1-3.3-4.4c0-1 .4-2.8 1.1-5-5.3.6-8.6 1.8-8.6 1.8 0-3.7 2.5-5.3 9.9-5.7l2.5-6.5c-4.1.8-6.7 2-6.7 2-2.2-2.3.7-5 8.5-5.8C17.3 8 21 3.4 23.4 6c0 0-2.3 3.3-5 8.1a58.5 58.5 0 016.7.3c2.2-3.4 4.6-5.3 6.3-3.6L29 15c7.6 1.7 5.2 5.6 5.2 5.6s-2.3-1.6-7-2.6a82.6 82.6 0 00-3.4 7.6zm98 4.3c0 2.2-4.5 6-6 4.6-1.6-1.5 7.7-10.3 7.7-12.4 0-2.2-1.9-4-4.9-4-3 0-8.5 2.8-8.5 5.8s1.6 3 1.6 3c1.3-2.3 5.9-6.9 7.4-5.3 1.7 1.7-7 7.8-7 12 0 2.6 1.8 4.4 4 4.4 4.1 0 7.7-4.2 7.7-6.3 0-2-2-1.8-2-1.8zm-84.5 2.7c-3 0-4.8 2.4-4.3 3 1.7 1.6 3.6.1 5.7-2.9l-1.4-.1zm162.7.3c0 1.3.1 2.7 2 2.7 4 0 11-8.3 8.3-10.9-.6-.7-1.7-.8-2.8-.7a49.3 49.3 0 01-6.7 3.7 18 18 0 00-.8 5.2zm-18.3-2c0 2.5 1.4 4.3 3.2 4.3 2 0 4.5-2.7 5.9-6.3-3-.8-5.3-2.5-6.6-4.5a9.7 9.7 0 00-2.5 6.5zm77.2-4.6c-2.4 2.8-3 6.7-2 7.6 4 3.4 14-9 10.8-11.7-1.6-1.3-5.8.6-8.8 4.1zM82.2 34c.9 1 5.6-3.2 5.8-7.9v-.5c-4 3.4-7 7.1-5.8 8.4zm146.7-12.8c1.6 0 2.4 1 2.4 2 .1 2.5-4.4 4.6-7.3 4.7-1.3 0-2-.1-2.5-.3 1.7-3.5 5-6.3 7.4-6.4zm-80.2 6c3.6.5 10.5-4 8.3-6-1.2-1.1-6.3 1.3-8.3 6zm40.4-9.6c1.8 0 2.8 2 2.8 5.4 0 .9 0 1.7-.2 2.6-3.8-.7-4.9-3.2-4.9-4.7 0-1.7 1-3.3 2.3-3.3zm-175.5 7a122.3 122.3 0 016.2.3c1-2.5 2.1-5 3.4-7.4a35 35 0 00-6.6.1l-3 7zm204-15.3c1.2 1.1-6.3 10-15.1 14.2C207 14.7 216.3 8 217.6 9.3z"/></svg>
-				<h1>КАК&nbsp;СОБАКИ СПАСАЮТ ЛЮДЕЙ</h1>
+				<h1>КАК СОБАКИ СПАСАЮТ ЛЮДЕЙ</h1>
 				<div class="btn-down"></div>
 			</div>
 			<div class="soc-btns">								
@@ -597,7 +597,7 @@
 										</div>
 										<div class="text-wrap">
 											<h5>ДАРСИ</h5>
-											<p>
+											<p class="attrs">
 												<span class="orange">Хозяйка (кинолог и&nbsp;ветеринар): </span>Виктория</br>
 												<span class="orange">Порода: </span>Муди (венгерская пастушья собака)</br>
 												<span class="orange">Возраст: </span>4,5 года</br>
@@ -613,7 +613,7 @@
 										</div>
 										<div class="text-wrap">
 											<h5>ТРОЙ</h5>
-											<p>
+											<p class="attrs">
 												<span class="orange">Хозяин: </span>Дмитрий</br>
 												<span class="orange">Порода: </span>Муди</br>
 												<span class="orange">Возраст: </span>2&nbsp;года</br>
@@ -623,15 +623,13 @@
 											<p>Трой&nbsp;&mdash; аттестованный спасатель класса &laquo;А&raquo;. Обожает своего старшего друга бордер-колли Барта и&nbsp;немножко пасует перед Даней. Трой юркий, ловкий и&nbsp;прыгает, как Майкл Джордан. </p>
 										</div>
 									</div> 
-
-
 									<div class="slider-black-item">
 										<div class="img-wrap">
 											<img src="img/pes-kukla.png" alt="кукла">
 										</div>
 										<div class="text-wrap">
 											<h5>КУКЛА</h5>
-											<p>
+											<p class="attrs">
 												<span class="orange">Хозяйка (кинолог): </span>Лида</br>
 												<span class="orange">Порода: </span>Австралийская овчарка</br>
 												<span class="orange">Возраст: </span>4&nbsp;года</br>
@@ -641,14 +639,13 @@
 											<p>Тренируется Кукла с&nbsp;декабря 2017&nbsp;года, а&nbsp;выезжать на&nbsp;поиски начала только в&nbsp;этом году. И&nbsp;успела поучаствовать в&nbsp;20&nbsp;поисках, последний из&nbsp;которых был в&nbsp;ноябре и&nbsp;завершился Куклиным триумфом&nbsp;&mdash; она помогла найти бабушку, трое суток плутавшую в&nbsp;лесу. Любимое лакомство у&nbsp;Куклы&nbsp;&mdash; еда! Любимое занятие&nbsp;&mdash; еда!</p>
 										</div>
 									</div> 
-
 									<div class="slider-black-item">
 										<div class="img-wrap">
 											<img src="img/pes-sanni.png" alt="санни">
 										</div>
 										<div class="text-wrap">
 											<h5>САННИ</h5>
-											<p>
+											<p class="attrs">
 												<span class="orange">Хозяин: </span>Дмитрий</br>
 												<span class="orange">Порода: </span>Лабрадор</br>
 												<span class="orange">Возраст: </span>8&nbsp;лет</br>
@@ -658,15 +655,13 @@
 											<p>Санни&nbsp;&mdash; аттестованная собака-спасатель. Работает уже седьмой год. Она способна найти человека и&nbsp;может заменить большое количество людей-спасателей. Кроме своей работы Санни любит купаться и&nbsp;играть в&nbsp;водное поло мячиком для тенниса.</p>
 										</div>
 									</div> 
-
-
 									<div class="slider-black-item">
 										<div class="img-wrap">
 											<img src="img/pes-cherka.png" alt="черка">
 										</div>
 										<div class="text-wrap">
 											<h5>ЧЕРКА</h5>
-											<p>
+											<p class="attrs">
 												<span class="orange">Хозяйка (кинолог): </span>Ольга</br>
 												<span class="orange">Порода: </span>Немецкая овчарка</br>
 												<span class="orange">Возраст: </span>7&nbsp;месяцев</br>
@@ -676,15 +671,13 @@
 											<p>Черка обожает работать&nbsp;&mdash; искать людей в&nbsp;самых сложных условиях. А&nbsp;еще ее&nbsp;имя переводится с&nbsp;итальянского как &laquo;поисковик&raquo;, так что перед нами прирожденный спасатель. </p>
 										</div>
 									</div> 
-
-
 									<div class="slider-black-item">
 										<div class="img-wrap">
 											<img src="img/pes-edg.png" alt="ЭДЖ">
 										</div>
 										<div class="text-wrap">
 											<h5>ЭДЖ</h5>
-											<p>
+											<p class="attrs">
 												<span class="orange">Хозяин: </span>Евгений</br>
 												<span class="orange">Порода: </span>Шоколадный лабрадор</br>
 												<span class="orange">Возраст: </span>2,5 года</br>
@@ -694,15 +687,13 @@
 											<p>Эдж терпеть не&nbsp;может оставаться один. Он&nbsp;одинаково обожает всех людей и&nbsp;собак. А&nbsp;еще, как Рокфор из&nbsp;детского мультика, при запахе сыра теряет голову.</p>
 										</div>
 									</div> 
-
-
 									<div class="slider-black-item">
 										<div class="img-wrap">
 											<img src="img/pes-danya.png" alt="даня">
 										</div>
 										<div class="text-wrap">
 											<h5>ДАНЯ</h5>
-											<p>
+											<p class="attrs">
 												<span class="orange">Хозяйка: </span>Юлия</br>
 												<span class="orange">Порода: </span>Белая швейцарская овчарка</br>
 												<span class="orange">Возраст: </span>2,5 года</br>
@@ -718,7 +709,7 @@
 										</div>
 										<div class="text-wrap">
 											<h5>ГАРДЕЙ</h5>
-											<p>
+											<p class="attrs">
 												<span class="orange">Хозяйка: </span>Наталья</br>
 												<span class="orange">Порода: </span>Лабрадор</br>
 												<span class="orange">Возраст: </span>3,5 года</br>
@@ -728,15 +719,13 @@
 											<p>Гардей начал тренироваться, когда ему было всего шесть месяцев, а&nbsp;в&nbsp;год уже прошел аттестацию по&nbsp;нормативам МЧС. Гардей очень ласковый и&nbsp;искренне любит людей, животных и&nbsp;особенно лучшего друга&nbsp;&mdash; Даню. </p>
 										</div>
 									</div> 
-
-
 									<div class="slider-black-item">
 										<div class="img-wrap">
 											<img src="img/pes-kant.png" alt="кант">
 										</div>
 										<div class="text-wrap">
 											<h5>КАНТ</h5>
-											<p>
+											<p class="attrs">
 												<span class="orange">Хозяйка: </span>Олеся</br>
 												<span class="orange">Порода: </span>Немецкая овчарка</br>
 												<span class="orange">Возраст: </span>2&nbsp;года</br>
@@ -764,30 +753,34 @@
 										<path fill="none" stroke="#FFF" stroke-linecap="round" stroke-linejoin="round" d="M160.4 179.3s-16.4 19.2-40.2 22.5c0 0-1.4 30.7 12.2 44.7 0 0 20 1.6 20 20.3h-27.9s-23-34.3-27.5-50.5"/><path fill="none" stroke="#FFF" stroke-linecap="round" stroke-width="3" d="M354.2 24v4.6"/><path fill="none" stroke="#FFF" stroke-linecap="round" stroke-linejoin="round" d="M329 22c5 10 11.5 39.3-7.5 41.5-24.9 2.9-22.8-29-20.3-40.2"/>
 										<path fill="none" stroke="#FFF" stroke-linecap="round" d="M287.5 195.7c0 6.5 1.6 40.2 14 47.7 0 0 21.5 4.7 19 23.4h-23s-21.8-21.9-22.5-39"/>
 									</svg>
-									<div class="infogr1-left-item fade-up">
+
+									<div class="infogr1-left-item fade-up" data-info="1">
 										<div class="title">Рост</div>
 										<div class="num">70<span class="ed">см</span></div>
 										<div class="arr"></div>
 										<div class="num">40<span class="ed">см</span></div>
 									</div>
-									<div class="infogr1-left-item fade-up">
+
+									<div class="infogr1-left-item fade-up"  data-info="2">
 										<div class="title">Вес</div>
 										<div class="num">45<span class="ed">кг</span></div>
 										<div class="arr"></div>
 										<div class="num">10<span class="ed">кг</span></div>
 									</div>
-									<div class="infogr1-left-item fade-up">
+
+									<div class="infogr1-left-item fade-up"  data-info="3">
 										<div class="title">Смена</div>
 										<div class="num mb10">5<span class="ed">часов</span></div>
 										<div class="num">15-20<span class="ed">км</span></div>
 									</div>
-									<div class="infogr1-left-item fade-up">
+
+									<div class="infogr1-left-item fade-up"  data-info="4">
 										<div class="title">Перерыв</div>
 										<div class="num">2-3<span class="ed"><span class="ml">каждые часа</span></span></div>
 									</div>
 								</div>
 								<div class="infogr1-right">
-									<div class="infogr1-right-item fade-up">
+									<div class="infogr1-right-item fade-up"  data-info="1">
 										<ul>
 											<li>Носят на&nbsp;себе приборы</li>
 											<li>Передвигаются бегом, ползком и&nbsp;вплавь </li>
@@ -795,7 +788,7 @@
 											<li>Умеют хорошо ориентироваться на&nbsp;местности</li>
 										</ul>
 									</div>
-									<div class="infogr1-right-item fade-up">
+									<div class="infogr1-right-item fade-up"  data-info="2">
 										<p class="title">Подготовка</p>
 										<p>Полноценно работать в&nbsp;поисковом отряде собака начинает через 1,5-2 года тренировок</p>
 										<ul>
@@ -805,23 +798,27 @@
 											<li>Ежедневные задания на&nbsp;прогулке</li>
 										</ul>
 									</div>
-									<div class="infogr1-right-item fade-up">
+
+									<div class="infogr1-right-item fade-up" data-info="3">
 										<p class="title">Поиск</p>
 										<p>Проверить квадрат леса площадью 500&nbsp;кв. метров без собаки 6&nbsp;часов&nbsp;/ с&nbsp;собакой 3-3,5 часа</p>
 										<p>За&nbsp;день поиска волонтер с&nbsp;собакой отрабатывает 5&nbsp;часов или 15-20&nbsp;км</p>
 									</div>
-									<div class="infogr1-right-item fade-up">
+
+									<div class="infogr1-right-item fade-up" data-info="3">
 										<p class="title">Отдых</p>
 										<p>После 2&nbsp;часов&nbsp;&mdash; отдых 20-30 минут</p>
 										<p>После 5&nbsp;часов&nbsp;&mdash; отдых 60-120 минут</p>
 									</div>
-									<div class="infogr1-right-item fade-up">
+
+									<div class="infogr1-right-item fade-up" data-info="4">
 										<p class="title">Еда</p>
 										<p><span class="orange">Каждый день:</span></p>
 										<p>высококалорийный корм, который содержит белки, легкоусвояемые жиры и&nbsp;углеводы</p>
 										<p><span class="orange">Во&nbsp;время тренировок в&nbsp;поле и&nbsp;поиска:</span></p>
 										<p>сухой корм, консервы, лакомства</p>
 									</div>
+
 								</div>
 							</div>
 
@@ -873,7 +870,7 @@
 								<p class="blockquote-job">ветеринарный врач-гастроэнтеролог</p>
 							</blockquote>
 
-							<h4>Dog Chow<sup class="reg">&reg;</sup> Active&nbsp;- <br>полнорационный корм<br>для активных собак</h4>
+							<h4>Dog Chow<sup class="reg">&reg;</sup>&nbsp;- полнорационный корм для активной собаки</h4>
 
 
 							<div id="infogr2">
