--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 							</blockquote>
 
 
-							<div class="slider-fullscreen fade-zoom-up">
+							<div class="slider-fullscreen fade-zoom-up grad-black">
 								<div class="owl-carousel">
 									<div class="slider-fullscreen-item">
 										<div class="img-wrap img-par">
