правки по верстке

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 	<title></title>
 	<meta name="description" content="" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	<link href="css/style.css?v=170" type="text/css" rel="stylesheet" />
+	<link href="css/style.css?v=171" type="text/css" rel="stylesheet" />
 	<script src="js/pace.min.js"></script>
-	<script src="js/script.js?v=170"></script>
+	<script src="js/script.js?v=171"></script>
 </head>
 <body class="firstload main" data-slide="1">
 	<div id="bg"></div>
@@ -327,7 +327,7 @@
 
 							<div class="short-text-block fade-up">
 								<h4>Чем кормят</br>при обучении</h4>
-								<p> В&nbsp;&laquo;учебный период&raquo; кинологи кормят собак так&nbsp;же, как и&nbsp;в&nbsp;повседневной жизни. Рацион собаки-спасателя регулируется исключительно владельцем и&nbsp;личными предпочтениями. Естественно, если это сезон активных нагрузок, то&nbsp;порции увеличиваются, корм выбирают б олее калорийный. В&nbsp;дни &laquo;полевых&raquo; тренировок чаще всего используют&nbsp;то, что можно без проблем взять с&nbsp;собой,&nbsp;&mdash; сухой корм, например, или консервы. И&nbsp;разумеется, у&nbsp;хозяина собаки всегда должны быть при себе лакомства, которыми пса поощряют за&nbsp;удачные решения, чтобы поддерживать интерес к&nbsp;занятиям, тренировать концентрацию 
+								<p> В&nbsp;&laquo;учебный период&raquo; кинологи кормят собак так&nbsp;же, как и&nbsp;в&nbsp;повседневной жизни. <span class="orange-bu">Рацион</span> собаки-спасателя регулируется исключительно владельцем и&nbsp;личными предпочтениями. Естественно, если это сезон активных нагрузок, то&nbsp;порции увеличиваются, корм выбирают б олее калорийный. В&nbsp;дни &laquo;полевых&raquo; тренировок чаще всего используют&nbsp;то, что можно без проблем взять с&nbsp;собой,&nbsp;&mdash; сухой корм, например, или консервы. И&nbsp;разумеется, у&nbsp;хозяина собаки всегда должны быть при себе лакомства, которыми пса поощряют за&nbsp;удачные решения, чтобы поддерживать интерес к&nbsp;занятиям, тренировать концентрацию 
 								и&nbsp;настойчивость. </p>
 							</div>
 							
@@ -507,7 +507,7 @@
 
 							<div class="short-text-block fade-up">
 								<h4>Питание<br>на&nbsp;работе</h4>
-								<p>Питание собаки-поисковика должно быть полноценным и&nbsp;сбалансированным. Чтобы собака показывала результативную работу и&nbsp;хорошую выносливость, она должна быть в&nbsp;форме постоянно. Никакого специального питания для собак-спасателей нет, критерии здесь точно такие&nbsp;же, как и&nbsp;для любой активной собаки. В&nbsp;промышленных кормах есть все необходимые компоненты. Главное, чтобы собака получала высококалорийное питание.</p>
+								<p>Питание собаки-поисковика должно быть полноценным и&nbsp;сбалансированным. Чтобы собака показывала результативную работу и&nbsp;хорошую выносливость, она должна быть в&nbsp;форме постоянно. Никакого специального питания для собак-спасателей нет, критерии здесь точно такие&nbsp;же, как и&nbsp;для любой активной собаки. В&nbsp;промышленных кормах есть все необходимые компоненты. Главное, чтобы собака получала <span class="orange-bu">высококалорийное питание</span>.</p>
 							</div>
 
 							<blockquote class="fade-up">
