--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
 
 							<div class="short-text-block fade-up">
 								<h4>Чем кормят</br>при обучении</h4>
-								<p> В&nbsp;&laquo;учебный период&raquo; кинологи кормят собак так&nbsp;же, как и&nbsp;в&nbsp;повседневной жизни. <span class="orange-bu">Рацион</span> собаки-спасателя регулируется исключительно владельцем и&nbsp;личными предпочтениями. Естественно, если это сезон активных нагрузок, то&nbsp;порции увеличиваются, корм выбирают б олее калорийный. В&nbsp;дни &laquo;полевых&raquo; тренировок чаще всего используют&nbsp;то, что можно без проблем взять с&nbsp;собой,&nbsp;&mdash; сухой корм, например, или консервы. И&nbsp;разумеется, у&nbsp;хозяина собаки всегда должны быть при себе лакомства, которыми пса поощряют за&nbsp;удачные решения, чтобы поддерживать интерес к&nbsp;занятиям, тренировать концентрацию 
+								<p> В&nbsp;&laquo;учебный период&raquo; кинологи кормят собак так&nbsp;же, как и&nbsp;в&nbsp;повседневной жизни. <span data-link="5" class="orange-bu">Рацион</span> собаки-спасателя регулируется исключительно владельцем и&nbsp;личными предпочтениями. Естественно, если это сезон активных нагрузок, то&nbsp;порции увеличиваются, корм выбирают б олее калорийный. В&nbsp;дни &laquo;полевых&raquo; тренировок чаще всего используют&nbsp;то, что можно без проблем взять с&nbsp;собой,&nbsp;&mdash; сухой корм, например, или консервы. И&nbsp;разумеется, у&nbsp;хозяина собаки всегда должны быть при себе лакомства, которыми пса поощряют за&nbsp;удачные решения, чтобы поддерживать интерес к&nbsp;занятиям, тренировать концентрацию 
 								и&nbsp;настойчивость. </p>
 							</div>
 							
