--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
 	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 	j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-	'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+	'https://www.google tagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 	})(window,document,'script','dataLayer','GTM-PV4QKRH');</script>
 	<!-- End Google Tag Manager -->
 	
 </head>
 <body class="firstload main" data-slide="1">
 	<!-- Google Tag Manager (noscript) -->
-	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PV4QKRH"
+	<noscript><iframe src="https://www.google tagmanager.com/ns.html?id=GTM-PV4QKRH"
 	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<!-- End Google Tag Manager (noscript) -->
 	
@@ -44,8 +44,8 @@
 	</div>
 	<div id="float-dog"></div>
 	<div class="soc-btns">								
-		<script src="https://yastatic.net/es5-shims/0.0.2/es5-shims.min.js"></script>
-		<script src="https://yastatic.net/share2/share.js"></script>
+		<script src="https://ya static.net/es5-shims/0.0.2/es5-shims.min.js"></script>
+		<script src="https://ya static.net/share2/share.js"></script>
 		<div class="ya-share2" data-services="twitter,facebook,vkontakte"></div>
 	</div>
 	<div id="wrap">
@@ -86,7 +86,7 @@
 								<div class="owl-carousel">
 
 									<div class="slider-white-item">
-										<div class="img-wrap">
+										<div class="img-wrap" style="transform: scale(1.2) translate(5%,2%);">
 											<img src="img/article1-labrador.jpeg" alt="спаниель">
 										</div>
 										<div class="text-wrap">
