--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 	<meta name="msapplication-TileImage" content="ms-icon-144x144.png">
 	<meta name="theme-color" content="#ffffff">
 
-	<link href="css/style.css?v=333" type="text/css" rel="stylesheet" />
+	<link class="prod" href="css/style.css?v=1210" type="text/css" rel="stylesheet" />
 	<script src="js/pace.min.js"></script>
-	<script src="js/script.js?v=333"></script>
+	<script class="prod" src="js/script.js?v=1210"></script>
 	<!-- Google Tag Manager -->
 	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -67,14 +67,14 @@
 	</div>
 
 	<div class="infogr1-left">
+		<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 399 272">
+			<path fill="#2B2B2B" d="M41.8 74.3C29 66.3 16.6 54.9 1.6 55.6c-2 35 30.6 68 65.7 66.4 3.1-.2 6.6-.5 9 1.4 2 1.4 2.8 3.7 3.5 6A55.7 55.7 0 0165 185c-8.3 7.7-20.2 17.6-14.8 27.5 3.4 6.5 13 7.4 19.3 3.8A42 42 0 0083.6 200a405 405 0 0046.6 70.3c5.5-17.8-8.5-36.6-5.5-55 2.6-15.7 17.3-26.9 32.5-32 26.4-9.1 55.3-4.7 82.9-.2 3.3.5 7 1.2 9.1 3.8 2.7 3 2.4 7.5 2.2 11.5-1.2 24.4 6 49 20.3 68.8 5-6.9 7.5-15.6 6.9-24a104.6 104.6 0 0036.9 23c.5-14.8-11.2-26.9-18.4-40-12-22-11.3-49.2-3.6-73.1 7.7-24 21.7-45.3 35.5-66.2 6.1-9.3 12.7-19 22.6-23.8 7.6-3.7 17.2-4.7 22.1-11.5 6.8-9.6-.8-23.3-10.8-29.6a49.7 49.7 0 00-51.6-.3c-25.2 15.6-32.7 51.5-58.7 65.7-15.8 8.6-34.9 7.3-52.8 5.7-28-2.4-55.7-10-84-8.4-28.3 1.6-47.6 6.3-74-10.3"/>
+			<path fill="none" stroke="#FFF" stroke-linecap="round" stroke-linejoin="round" d="M143.6 132.1c.4 13.6 3.6 47.5-45.3 63.1C66 205.5 65.5 249 65.5 249s18.3 2.3 16.4 17.8H50.6c-3.8-20.1 1.9-59 0-67.4 0 0 29-18.2 29.9-39.7 1-21.5 0-52 21-66 0 0-34.9 33.3-52.2 26.7A77.1 77.1 0 011.5 45.1s25.4 42 96.3 36c28-2.3 39.5 4.4 61.2 5.6 44.6 2.6 85.4-2.4 104.2-12.1 11.8-6.1 29.6-21.7 38-51.3C309.6-6.3 343 1.5 352 5.5s18 15.6 18 15.6h27.2s1.8 36.5-28.4 38.4A49.2 49.2 0 00330 79a99.3 99.3 0 00-17.2 44c-6.5 37.6-30.3 48-43.9 74.6-9.9 19.4-8 51-8 51 8 .9 14 9.3 14 18.2h-27.5c-9.3-12.2-9.3-108-9.3-108"/>
+			<path fill="none" stroke="#FFF" stroke-linecap="round" d="M141.9 156s75 20.5 96 20"/>
+			<path fill="none" stroke="#FFF" stroke-linecap="round" stroke-linejoin="round" d="M160.4 179.3s-16.4 19.2-40.2 22.5c0 0-1.4 30.7 12.2 44.7 0 0 20 1.6 20 20.3h-27.9s-23-34.3-27.5-50.5"/><path fill="none" stroke="#FFF" stroke-linecap="round" stroke-width="3" d="M354.2 24v4.6"/><path fill="none" stroke="#FFF" stroke-linecap="round" stroke-linejoin="round" d="M329 22c5 10 11.5 39.3-7.5 41.5-24.9 2.9-22.8-29-20.3-40.2"/>
+			<path fill="none" stroke="#FFF" stroke-linecap="round" d="M287.5 195.7c0 6.5 1.6 40.2 14 47.7 0 0 21.5 4.7 19 23.4h-23s-21.8-21.9-22.5-39"/>
+		</svg>
 		<div class="infogr1-left-item" data-info="1">
-			<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 399 272">
-				<path fill="#2B2B2B" d="M41.8 74.3C29 66.3 16.6 54.9 1.6 55.6c-2 35 30.6 68 65.7 66.4 3.1-.2 6.6-.5 9 1.4 2 1.4 2.8 3.7 3.5 6A55.7 55.7 0 0165 185c-8.3 7.7-20.2 17.6-14.8 27.5 3.4 6.5 13 7.4 19.3 3.8A42 42 0 0083.6 200a405 405 0 0046.6 70.3c5.5-17.8-8.5-36.6-5.5-55 2.6-15.7 17.3-26.9 32.5-32 26.4-9.1 55.3-4.7 82.9-.2 3.3.5 7 1.2 9.1 3.8 2.7 3 2.4 7.5 2.2 11.5-1.2 24.4 6 49 20.3 68.8 5-6.9 7.5-15.6 6.9-24a104.6 104.6 0 0036.9 23c.5-14.8-11.2-26.9-18.4-40-12-22-11.3-49.2-3.6-73.1 7.7-24 21.7-45.3 35.5-66.2 6.1-9.3 12.7-19 22.6-23.8 7.6-3.7 17.2-4.7 22.1-11.5 6.8-9.6-.8-23.3-10.8-29.6a49.7 49.7 0 00-51.6-.3c-25.2 15.6-32.7 51.5-58.7 65.7-15.8 8.6-34.9 7.3-52.8 5.7-28-2.4-55.7-10-84-8.4-28.3 1.6-47.6 6.3-74-10.3"/>
-				<path fill="none" stroke="#FFF" stroke-linecap="round" stroke-linejoin="round" d="M143.6 132.1c.4 13.6 3.6 47.5-45.3 63.1C66 205.5 65.5 249 65.5 249s18.3 2.3 16.4 17.8H50.6c-3.8-20.1 1.9-59 0-67.4 0 0 29-18.2 29.9-39.7 1-21.5 0-52 21-66 0 0-34.9 33.3-52.2 26.7A77.1 77.1 0 011.5 45.1s25.4 42 96.3 36c28-2.3 39.5 4.4 61.2 5.6 44.6 2.6 85.4-2.4 104.2-12.1 11.8-6.1 29.6-21.7 38-51.3C309.6-6.3 343 1.5 352 5.5s18 15.6 18 15.6h27.2s1.8 36.5-28.4 38.4A49.2 49.2 0 00330 79a99.3 99.3 0 00-17.2 44c-6.5 37.6-30.3 48-43.9 74.6-9.9 19.4-8 51-8 51 8 .9 14 9.3 14 18.2h-27.5c-9.3-12.2-9.3-108-9.3-108"/>
-				<path fill="none" stroke="#FFF" stroke-linecap="round" d="M141.9 156s75 20.5 96 20"/>
-				<path fill="none" stroke="#FFF" stroke-linecap="round" stroke-linejoin="round" d="M160.4 179.3s-16.4 19.2-40.2 22.5c0 0-1.4 30.7 12.2 44.7 0 0 20 1.6 20 20.3h-27.9s-23-34.3-27.5-50.5"/><path fill="none" stroke="#FFF" stroke-linecap="round" stroke-width="3" d="M354.2 24v4.6"/><path fill="none" stroke="#FFF" stroke-linecap="round" stroke-linejoin="round" d="M329 22c5 10 11.5 39.3-7.5 41.5-24.9 2.9-22.8-29-20.3-40.2"/>
-				<path fill="none" stroke="#FFF" stroke-linecap="round" d="M287.5 195.7c0 6.5 1.6 40.2 14 47.7 0 0 21.5 4.7 19 23.4h-23s-21.8-21.9-22.5-39"/>
-			</svg>
 			<div class="title">Рост</div>
 			<div class="num">70<span class="ed">см</span></div>
 			<div class="arr"></div>
@@ -131,7 +131,7 @@
 									</div>
 								</div>
 								<div class="dog-item-inner">
-									<div class="first-text-block fade-up">
+									<div class="first-text-block fade-up-first">
 										<p>Профессиональными спасателями собаки стали не&nbsp;вчера. Есть красивый миф о&nbsp;том, как Господь решил помочь жителям заснеженного острова Ньюфаундленд и&nbsp;создал им&nbsp;сильного, выносливого помощника, похожего на&nbsp;медведя. Собаки породы ньюфаундленд ценятся не&nbsp;только жителями Крайнего Севера, они хороши и&nbsp;в&nbsp;качестве поисковых псов. Так&nbsp;же, как и&nbsp;собаки, которых разводили монахи приюта Святого Бернара в&nbsp;Альпах,&nbsp;&mdash; сенбернары. С&nbsp;винными бочонками на&nbsp;шее их&nbsp;еще в&nbsp;XIX веке отправляли на&nbsp;помощь заблудившимся странникам, которых четвероногие спасатели отогревали своим теплом и&nbsp;длинной шерстью. Существует легенда о&nbsp;собаке Барри, спасшей таким образом более 40&nbsp;жизней, в&nbsp;том числе жизнь потерявшего сознание младенца, которого пес лизал до&nbsp;тех пор, пока тот не&nbsp;очнулся и&nbsp;не&nbsp;дождался помощи людей. Исторически считается, что собаки этих и&nbsp;некоторых других пород&nbsp;&mdash; прирожденные спасатели. </p>
 									</div>
 									<p class="slider-white-title fade-up">традиционные породы собак-компаньонов:</p>
@@ -347,7 +347,7 @@
 									</div>
 								</div>
 								<div class="dog-item-inner">
-									<div class="first-text-block fade-up">
+									<div class="first-text-block fade-up-first">
 										<p class="bold">В&nbsp;2019 году кинологи &laquo;Пожарно-спасательного центра Москвы&raquo; совместно с&nbsp;волонтерами поискового отряда &laquo;Лиза Алерт&raquo; выезжали на&nbsp;поиски потерявшихся людей более 80&nbsp;раз. И&nbsp;это только в&nbsp;Москве и&nbsp;области. За&nbsp;год было найдено и&nbsp;спасено более 60&nbsp;человек.</p>
 										<p>Отечественная методика подготовки служебных собак считается одной из&nbsp;лучших в&nbsp;мире. Во&nbsp;время тренировок собаки отрабатывают преодоление препятствий, поиск среди развалин, действия в&nbsp;полной темноте и&nbsp;в&nbsp;суровых погодных условиях. Собаки учатся носить на&nbsp;себе приборы, передвигаться ползком, вплавь, находиться с&nbsp;человеком в&nbsp;лодке, в&nbsp;самолете, вертолете. Они должны уметь хорошо ориентироваться на&nbsp;местности, так что для занятий подбирают участки с&nbsp;разнообразным рельефом, рассчитывают нагрузку, чтобы собак не&nbsp;переутомлять.</p>
 									</div>
@@ -546,7 +546,7 @@
 								</div>
 
 								<div class="dog-item-inner">
-									<div class="first-text-block fade-up">
+									<div class="first-text-block fade-up-first">
 										<p>Поиск людей в&nbsp;природной среде&nbsp;&mdash; сезонная работа. В&nbsp;холодное время года на&nbsp;поиск в&nbsp;лес спасатели выезжают редко. С&nbsp;приходом тепла, появлением первых грибов и&nbsp;ягод число вызовов резко увеличивается. Как ни&nbsp;странно, основная масса тех, кто теряется в&nbsp;лесу,&nbsp;&mdash; местные старожилы, которые знают в&nbsp;лесу каждую тропинку. Поисковик с&nbsp;собакой начинают работать, как правило, с&nbsp;рассветом и&nbsp;заканчивают с&nbsp;сумерками, то&nbsp;есть трудятся весь световой день.</p>
 									</div>
 
@@ -680,13 +680,10 @@
 										<h2>Знакомьтесь: </br><span>спасатели</span></h2>
 									</div>
 								</div>
-								<div class="dog-item-inner fade-up">
+								<div class="dog-item-inner">
 
-									<div class="slider-black">
+									<div class="slider-black fade-up-first">
 										<div class="owl-carousel">
-
-
-
 											<div class="slider-black-item">
 												<div class="img-wrap">
 													<img src="img/pes-darsi.png" alt="дарси">
@@ -961,12 +958,12 @@
 										<img src="img/article5-main-image.jpg" alt="КАКИХ СОБАК БЕРУТ СПАСАТЕЛИ">
 									</div>
 									<div class="h2-wrap">
-										<h2>Рацион для активных собак <br>Purina<sup class="reg">&reg;</sup> Dog Chow <sup class="reg">&reg;</sup></h2>
+										<h2>Рацион для активных собак <br>Purina<sup class="reg">&reg;</sup> Dog&nbsp;Chow&nbsp;<sup class="reg">&reg;</sup></h2>
 									</div>
 								</div>
 
 								<div class="dog-item-inner">
-									<div class="first-text-block fade-up">
+									<div class="first-text-block fade-up-first">
 										<p>Компания Purina<sup class="reg">&reg;</sup> производит корма для домашних животных с&nbsp;1926&nbsp;года. Многолетний опыт и&nbsp;научные исследования помогли экспертам Purina<sup class="reg">&reg;</sup> разработать линейку сухих кормов премиум-класса Dog Chow<sup class="reg">&reg;</sup>, которая учитывает размер, возраст и&nbsp;особенности организма собаки. В&nbsp;состав корма входят натуральные мясные ингредиенты, овощи, злаки и&nbsp;масла.</p>
 										<p>В&nbsp;правильной пропорции питание Dog Chow<sup class="reg">&reg;</sup> обеспечивает все необходимые питомцу вещества: белки, жиры, углеводы, незаменимые аминокислоты, минералы и&nbsp;витамины. Также в&nbsp;состав корма входит комплекс Naturium<sup class="reg">&reg;</sup>&nbsp;&mdash; сочетание клетчатки и&nbsp;пребиотика природного происхождения, который способствует улучшению пищеварения животного. Корм не&nbsp;содержит искусственных красителей, ароматизаторов и&nbsp;консервантов. </p>
 										<p>Еще одна особенность Dog Chow<sup class="reg">&reg;</sup>&nbsp;&mdash; забота о&nbsp;полости рта собаки. В&nbsp;каждой упаковке сухого корма содержатся гранулы разной формы и&nbsp;размера для медленного пережевывания. При этом в&nbsp;линейке предусмотрены отдельные продукты для активных животных&nbsp;&mdash; как раз таких, как собаки-спасатели.</p>
@@ -991,23 +988,23 @@
 									<div id="infogr2">
 										<div class="infogr2-left">
 											<div class="img-wrap ">
-												<img class=" fade-up" src="img/korm1.png" alt="purina dog chow">
+												<img class="pack fade-up" src="img/korm1.png" alt="purina dog chow">
 											</div>
 											<p class="orange fade-up">Также в&nbsp;ассортименте есть рационы для щенков и&nbsp;взрослых собак с&nbsp;различными потребностями</p>
 											<div class="img-wrap">
-												<svg class="fade-up" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" fill-rule="evenodd" stroke-linejoin="round" stroke-miterlimit="2" clip-rule="evenodd" viewBox="0 0 728 878">
-													<use width="646" height="878" x="41" y="0" xlink:href="#_Image1"/>
-													<a xlink:href="https://www.purina-dogchow.ru/products/puppy/Lamb" target="_blank"><path fill="#fff" fill-opacity="0.01" d="M42 0h180.8v264.5H42z"/></a>
-													<a xlink:href="https://www.purina-dogchow.ru/products/adult/Lamb" target="_blank"><path fill="#fff" fill-opacity="0.01" d="M271.9 0h178.6v264.5H271.9z"/></a>
-													<a xlink:href="https://www.purina-dogchow.ru/products/lifestyle/adult-sensitive" target="_blank"><path fill="#fff" fill-opacity="0.01" d="M501.6 0H686v264.5H501.6z"/></a>
-													<a xlink:href="https://www.purina-dogchow.ru/products/adult/LargeBreedTurkey" target="_blank"><path fill="#fff" fill-opacity="0.01" d="M42 308.5h180.8v265H42z"/></a>
-													<a xlink:href="https://www.purina-dogchow.ru/products/right-age-right-food/large-breed-puppy-with-turkey" target="_blank"><path fill="#fff" fill-opacity="0.01" d="M271.9 308.5h178.6v265H271.9z"/></a>
-													<a xlink:href="https://www.purina-dogchow.ru/products/adult/SmallBreedChicken" target="_blank"><path fill="#fff" fill-opacity="0.01" d="M501.6 308.5H686v265H501.6z"/></a>
-													<a xlink:href="https://www.purina-dogchow.ru/products/SmallBreedPuppyChicken" target="_blank"><path fill="#fff" fill-opacity="0.01" d="M42 612.5h180.8V878H42z"/></a>
-													<a xlink:href="https://www.purina-dogchow.ru/products/senior/Lamb" target="_blank"><path fill="#fff" fill-opacity="0.01" d="M271.9 612.5h178.6V878H271.9z"/></a>
-													<a xlink:href="https://www.purina-dogchow.ru/products/mature/Lamb" target="_blank"><path  fill="#fff" fill-opacity="0.01" d="M501.6 612.5H686V878H501.6z"/></a>
+												<svg id="infogr2-packs" class="fade-up" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" fill-rule="evenodd" stroke-linejoin="round" stroke-miterlimit="2" clip-rule="evenodd" viewBox="0 0 728 878">
+													<use width="724" height="900" x="2" y="-10" xlink:href="#_Image1"/>
+													<a title="puppy_lamb" xlink:href="https://www.purina-dogchow.ru/products/puppy/Lamb" target="_blank"><path fill="#fff" fill-opacity="0.01" d="M42 0h180.8v264.5H42z"/></a>
+													<a title="adult_lamb" xlink:href="https://www.purina-dogchow.ru/products/adult/Lamb" target="_blank"><path fill="#fff" fill-opacity="0.01" d="M271.9 0h178.6v264.5H271.9z"/></a>
+													<a title="adult_sensitive" xlink:href="https://www.purina-dogchow.ru/products/lifestyle/adult-sensitive" target="_blank"><path fill="#fff" fill-opacity="0.01" d="M501.6 0H686v264.5H501.6z"/></a>
+													<a title="large_breed_turkey" xlink:href="https://www.purina-dogchow.ru/products/adult/LargeBreedTurkey" target="_blank"><path fill="#fff" fill-opacity="0.01" d="M42 308.5h180.8v265H42z"/></a>
+													<a title="large_breed_puppy_with_turkey" xlink:href="https://www.purina-dogchow.ru/products/right-age-right-food/large-breed-puppy-with-turkey" target="_blank"><path fill="#fff" fill-opacity="0.01" d="M271.9 308.5h178.6v265H271.9z"/></a>
+													<a title="small_breed_chicken" xlink:href="https://www.purina-dogchow.ru/products/adult/SmallBreedChicken" target="_blank"><path fill="#fff" fill-opacity="0.01" d="M501.6 308.5H686v265H501.6z"/></a>
+													<a title="small_breed_puppy_chicken" xlink:href="https://www.purina-dogchow.ru/products/SmallBreedPuppyChicken" target="_blank"><path fill="#fff" fill-opacity="0.01" d="M42 612.5h180.8V878H42z"/></a>
+													<a title="senior_lamb" xlink:href="https://www.purina-dogchow.ru/products/senior/Lamb" target="_blank"><path fill="#fff" fill-opacity="0.01" d="M271.9 612.5h178.6V878H271.9z"/></a>
+													<a title="mature_lamb" xlink:href="https://www.purina-dogchow.ru/products/mature/Lamb" target="_blank"><path  fill="#fff" fill-opacity="0.01" d="M501.6 612.5H686V878H501.6z"/></a>
 													<defs>
-														<image id="_Image1" xlink:href="img/korm2.png" width="646" height="878"/>
+														<image id="_Image1" xlink:href="img/korm2.png" width="724" height="900"/>
 													</defs>
 												</svg>
 											</div>
@@ -1089,6 +1086,7 @@
 			<p>Продюсер: <span>КАЛЕРИЯ АНДРЕЕВА</span></p>
 			<p>Арт-директор: <span>АНДРЕЙ АЛЬБИКОВ</span></p><br><br>
 			<p class="sm">Также выражаем благодарность за предоставленные фотографии <span>САШЕ ХАРАДЗЕ, АЛЕКСАНДРЕ УЧАЕВОЙ, ВИКТОРИИ ВАСИЛЬЕВОЙ</span>.</p>
+			<p class="lt">®Владелец товарных знаков: Société des Produits Nestlé S.A. (Швейцария)</p>
 			<p class="lt">ТАСС информационное агентство (свидетельство о регистрации СМИ № 03247 выдано 2 апреля 1999 г. Государственным комитетом Российской Федерации по печати). Отдельные публикации могут содержать информацию, не предназначенную для пользователей <br>
 			до 16 лет.</p><br>
 			<p class="lt">© ТАСС, 2020</p>
