правки по мобильной версии

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 	<meta name="msapplication-TileImage" content="ms-icon-144x144.png">
 	<meta name="theme-color" content="#ffffff">
 
-	<link class="prod" href="css/style.css?v=1210" type="text/css" rel="stylesheet" />
+	<link class="prod" href="css/style.css?v=1211" type="text/css" rel="stylesheet" />
 	<script src="js/pace.min.js"></script>
-	<script class="prod" src="js/script.js?v=1210"></script>
+	<script class="prod" src="js/script.js?v=1211"></script>
 	<!-- Google Tag Manager -->
 	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -48,7 +48,7 @@
 	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PV4QKRH"
 	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<!-- End Google Tag Manager (noscript) -->
-	
+	<div id="firstdogs"><img src="img/d1.png"><img src="img/d2.png"><img src="img/d3.png"></div>
 	<div id="bg"></div>
 	<svg class="progress-circle" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" stroke-miterlimit="1.5" clip-rule="evenodd" viewBox="0 0 72 72">
 		<path fill="none" stroke="#4C4C4C" stroke-width="0.7" d="M38.4 62.2a23.9 23.9 0 01-23.8-23.8 23.9 23.9 0 0123.9-23.8 23.9 23.9 0 010 47.6"></path>
@@ -547,7 +547,7 @@
 
 								<div class="dog-item-inner">
 									<div class="first-text-block fade-up-first">
-										<p>Поиск людей в&nbsp;природной среде&nbsp;&mdash; сезонная работа. В&nbsp;холодное время года на&nbsp;поиск в&nbsp;лес спасатели выезжают редко. С&nbsp;приходом тепла, появлением первых грибов и&nbsp;ягод число вызовов резко увеличивается. Как ни&nbsp;странно, основная масса тех, кто теряется в&nbsp;лесу,&nbsp;&mdash; местные старожилы, которые знают в&nbsp;лесу каждую тропинку. Поисковик с&nbsp;собакой начинают работать, как правило, с&nbsp;рассветом и&nbsp;заканчивают с&nbsp;сумерками, то&nbsp;есть трудятся весь световой день.</p>
+										<p class="bold">Поиск людей в&nbsp;природной среде&nbsp;&mdash; сезонная работа. В&nbsp;холодное время года на&nbsp;поиск в&nbsp;лес спасатели выезжают редко. С&nbsp;приходом тепла, появлением первых грибов и&nbsp;ягод число вызовов резко увеличивается. Как ни&nbsp;странно, основная масса тех, кто теряется в&nbsp;лесу,&nbsp;&mdash; местные старожилы, которые знают в&nbsp;лесу каждую тропинку. Поисковик с&nbsp;собакой начинают работать, как правило, с&nbsp;рассветом и&nbsp;заканчивают с&nbsp;сумерками, то&nbsp;есть трудятся весь световой день.</p>
 									</div>
 
 									<p class="history-title fade-up">ИСТОРИЯ СПАСЕНИЯ</p>
@@ -988,21 +988,21 @@
 									<div id="infogr2">
 										<div class="infogr2-left">
 											<div class="img-wrap ">
-												<img class="pack fade-up" src="img/korm1.png" alt="purina dog chow">
+												<a class="prod-link" data-title="adult_active" href="https://www.purina-dogchow.ru/products/lifestyle/adult-active"><img class="pack fade-up" src="img/korm1.png" alt="purina dog chow"></a>
 											</div>
-											<p class="orange fade-up">Также в&nbsp;ассортименте есть рационы для щенков и&nbsp;взрослых собак с&nbsp;различными потребностями</p>
+											<p class="orange fade-up">Также в&nbsp;ассортименте есть рационы для щенков и&nbsp;взрослых собак различного размера и&nbsp;с&nbsp;разными потребностями.</p>
 											<div class="img-wrap">
 												<svg id="infogr2-packs" class="fade-up" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" fill-rule="evenodd" stroke-linejoin="round" stroke-miterlimit="2" clip-rule="evenodd" viewBox="0 0 728 878">
 													<use width="724" height="900" x="2" y="-10" xlink:href="#_Image1"/>
-													<a title="puppy_lamb" xlink:href="https://www.purina-dogchow.ru/products/puppy/Lamb" target="_blank"><path fill="#fff" fill-opacity="0.01" d="M42 0h180.8v264.5H42z"/></a>
-													<a title="adult_lamb" xlink:href="https://www.purina-dogchow.ru/products/adult/Lamb" target="_blank"><path fill="#fff" fill-opacity="0.01" d="M271.9 0h178.6v264.5H271.9z"/></a>
-													<a title="adult_sensitive" xlink:href="https://www.purina-dogchow.ru/products/lifestyle/adult-sensitive" target="_blank"><path fill="#fff" fill-opacity="0.01" d="M501.6 0H686v264.5H501.6z"/></a>
-													<a title="large_breed_turkey" xlink:href="https://www.purina-dogchow.ru/products/adult/LargeBreedTurkey" target="_blank"><path fill="#fff" fill-opacity="0.01" d="M42 308.5h180.8v265H42z"/></a>
-													<a title="large_breed_puppy_with_turkey" xlink:href="https://www.purina-dogchow.ru/products/right-age-right-food/large-breed-puppy-with-turkey" target="_blank"><path fill="#fff" fill-opacity="0.01" d="M271.9 308.5h178.6v265H271.9z"/></a>
-													<a title="small_breed_chicken" xlink:href="https://www.purina-dogchow.ru/products/adult/SmallBreedChicken" target="_blank"><path fill="#fff" fill-opacity="0.01" d="M501.6 308.5H686v265H501.6z"/></a>
-													<a title="small_breed_puppy_chicken" xlink:href="https://www.purina-dogchow.ru/products/SmallBreedPuppyChicken" target="_blank"><path fill="#fff" fill-opacity="0.01" d="M42 612.5h180.8V878H42z"/></a>
-													<a title="senior_lamb" xlink:href="https://www.purina-dogchow.ru/products/senior/Lamb" target="_blank"><path fill="#fff" fill-opacity="0.01" d="M271.9 612.5h178.6V878H271.9z"/></a>
-													<a title="mature_lamb" xlink:href="https://www.purina-dogchow.ru/products/mature/Lamb" target="_blank"><path  fill="#fff" fill-opacity="0.01" d="M501.6 612.5H686V878H501.6z"/></a>
+													<a data-title="puppy_lamb" xlink:href="https://www.purina-dogchow.ru/products/puppy/Lamb" target="_blank"><path fill="#fff" fill-opacity="0.01" d="M42 0h180.8v264.5H42z"/></a>
+													<a data-title="adult_lamb" xlink:href="https://www.purina-dogchow.ru/products/adult/Lamb" target="_blank"><path fill="#fff" fill-opacity="0.01" d="M271.9 0h178.6v264.5H271.9z"/></a>
+													<a data-title="adult_sensitive" xlink:href="https://www.purina-dogchow.ru/products/lifestyle/adult-sensitive" target="_blank"><path fill="#fff" fill-opacity="0.01" d="M501.6 0H686v264.5H501.6z"/></a>
+													<a data-title="large_breed_turkey" xlink:href="https://www.purina-dogchow.ru/products/adult/LargeBreedTurkey" target="_blank"><path fill="#fff" fill-opacity="0.01" d="M42 308.5h180.8v265H42z"/></a>
+													<a data-title="large_breed_puppy_with_turkey" xlink:href="https://www.purina-dogchow.ru/products/right-age-right-food/large-breed-puppy-with-turkey" target="_blank"><path fill="#fff" fill-opacity="0.01" d="M271.9 308.5h178.6v265H271.9z"/></a>
+													<a data-title="small_breed_chicken" xlink:href="https://www.purina-dogchow.ru/products/adult/SmallBreedChicken" target="_blank"><path fill="#fff" fill-opacity="0.01" d="M501.6 308.5H686v265H501.6z"/></a>
+													<a data-title="small_breed_puppy_chicken" xlink:href="https://www.purina-dogchow.ru/products/SmallBreedPuppyChicken" target="_blank"><path fill="#fff" fill-opacity="0.01" d="M42 612.5h180.8V878H42z"/></a>
+													<a data-title="senior_lamb" xlink:href="https://www.purina-dogchow.ru/products/senior/Lamb" target="_blank"><path fill="#fff" fill-opacity="0.01" d="M271.9 612.5h178.6V878H271.9z"/></a>
+													<a data-title="mature_lamb" xlink:href="https://www.purina-dogchow.ru/products/mature/Lamb" target="_blank"><path  fill="#fff" fill-opacity="0.01" d="M501.6 612.5H686V878H501.6z"/></a>
 													<defs>
 														<image id="_Image1" xlink:href="img/korm2.png" width="724" height="900"/>
 													</defs>
@@ -1012,7 +1012,7 @@
 										<div class="infogr2-right">
 											<div class="infogr2-right-item fade-up">
 												<p class="title"><span class="orange">Содержит:</span></p>
-												<p>натуральные ингредиенты, пребиотики, белки высокого качества, полезные жиры, аминокислоты, антиоксиданты</p>
+												<p>натуральные ингредиенты, природные пребиотики, белки высокого качества, полезные жиры, аминокислоты, антиоксиданты</p>
 												<p class="title"><span class="orange">Не&nbsp;содержит:</span></p class="title">
 												<p>искусственные красители, ароматизаторы, консерванты</p>
 											</div>
